--- a/mod/thmod/localisation/english/ai_crisis_l_english.yml
+++ b/mod/thmod/localisation/english/ai_crisis_l_english.yml
@@ -24,16 +24,16 @@
  crisis.2023.a:0 "Put the fleet on full alert!"
  crisis.2510.name:0 "Ghost Signal Blocked"
  crisis.2510.desc:1 "We have now devised an algorithm that blocks the Ghost Signal from causing further interference. Our firewalls have been restored, our core drive is intact and our unit stacks are operating at full capacity yet we couldn't get our FTL inhibitors working. We have outwitted the inferior processing power of the Contingency and soon they will "§Y<Kill. Maim. Dismember>§!" no more."
- crisis.2030.name:0 "โลกเครื่องจักร"
+ crisis.2030.name:0 "ดาวเครื่องจักร"
  crisis.2030.desc:0 "A massive energy spike has been reported in the §H[From.solar_system.GetName]§! system! The entire surface of one of the system's barren worlds has come apart, revealing some kind of planet-wide factory.\n\nVast fleets of strange AI-controlled vessels are emerging from beneath the surface of this Machine World in search of targets to attack."
  crisis.2030.a:0 "This does not bode well."
- crisis.2031.name:0 "โลกเครื่องจักรที่สอง"
+ crisis.2031.name:0 "ดาวเครื่องจักรที่สอง"
  crisis.2031.desc:0 "We have detected yet another massive energy spike, this time coming from the §H[From.solar_system.GetName]§! system! After rapidly cooling through some kind of artificial means, a molten planet in the system cracked open to reveal an immense planetary factory.\n\nEven now, the Machine World is spewing forth vast fleets of AI-controlled warships."
  crisis.2031.a:0 "Another one?"
- crisis.2032.name:0 "โลกเครื่องจักรที่สาม"
+ crisis.2032.name:0 "ดาวเครื่องจักรที่สาม"
  crisis.2032.desc:0 "We have identified what must be a third Machine World in the §H[From.solar_system.GetName]§! system. A local gas giant spontaneously ignited, burning with the intensity of a small sun for close to a standard day.\n\nThe planet then rapidly cooled, revealing its metal core - complete with the same planet-wide factories that have been witnessed on other Machine Worlds. Huge AI-controlled defensive fleets have already taken up positions in orbit."
  crisis.2032.a:0 "This is getting worse and worse."
- crisis.2033.name:0 "โลกเครื่องจักรที่สี่"
+ crisis.2033.name:0 "ดาวเครื่องจักรที่สี่"
  crisis.2033.desc:0 "A fourth Machine World is now active in the §H[From.solar_system.GetName]§! system. The sixth planet of the system, which was previously covered in toxic fumes, somehow expunged its dense atmosphere in a matter of days. When this process was over, the planet's surface parted to reveal an immense, planet-wide factory complex.\n\nAncient fleets of AI-controlled warships are now emerging from underground hangars to continue the crusade against the entirety of organic civilization."
  crisis.2033.a:0 "This is hopefully the last one."
  ghost_signal_chain_title:0 "The Ghost Signal"
@@ -175,11 +175,11 @@
  ai_crisis_chain_title:0 "The Contingency"
  ai_crisis_chain_desc:0 "A previously dormant AI civilization has been awakened in our galaxy. They refer to themselves as the Contingency, and are dedicated towards the sterilization of all of galactic civilization - organic or otherwise."
  assimilated_worlds:0 "§YWorlds Assimilated By The Contingency§!"
- active_machine_worlds:0 "§Yเปิดใช้โลกเครื่องจักร§!"
+ active_machine_worlds:0 "§Yเปิดใช้ดาวเครื่องจักร§!"
  contingency_kills_us:0 "§GContingency Warforms Offlined By Us§!"
  contingency_kills_others:0 "§GContingency Warforms Annulled By Others§!"
  contingency_victims:0 "§RVessels Euthanized By The Contingency§!"
- ai_crisis_poi_1:0 "โลกเครื่องจักร"
+ ai_crisis_poi_1:0 "ดาวเครื่องจักร"
  ai_crisis_poi_1_desc:0 "The planet-wide factories on this Machine World are continuously reinforcing the Contingency with new hunter-killer warforms. These planets are believed to be their only source of reinforcements."
  ai_crisis_poi_2:0 "$ai_crisis_poi_1$"
  ai_crisis_poi_2_desc:0 "$ai_crisis_poi_1_desc$"
