--- a/mod/thmod/localisation/english/distant_stars_l_english.yml
+++ b/mod/thmod/localisation/english/distant_stars_l_english.yml
@@ -573,16 +573,16 @@
  distar.246.desc:1 "§EInitiating Communications Protocol. Hel-lo, <<UNIDENTIFIED VISITOR C>>. I am $NAME_Caretaker$ of Xolexin Drop Pod 175. I have been programmed to assist citizens during the resettlement procedure.§!"
  distar.246.f:0 "What happened here?"
  distar.246.f.response:0 "§EUn--fortunately, a hyperdrive malfunction led Drop Pods 114 through 175 to exit hyperspace eighteen parsecs from our intended destination.\n\nI have attended the citizens as best I could. I managed to prevent cannibalism for one-thousand-eight-hundred-and-forty days. Un--fortunately, their air supply eventually ran out.\n\nDo you have citizens in need of tending, <<UNIDENTIFIED VISITOR C>>? If so, I would be happy to care for them.§!"
- distar.246.a:1 "Welcome Caretaker!"
+ distar.246.a:1 "ยินดีต้อนรับ Caretaker!"
  distar.246.a.tooltip:0 "§Yผู้ว่าการ $NAME_Caretaker$§! จะถูกเพิ่มเข้าในกลุ่มผู้นำที่สามารถเลือกจ้างได้"
- distar.246.b:1 "Analyse its parts."
+ distar.246.b:1 "วิเคราะห์ส่วนต่างๆ ของมัน"
  distar.246.b.tooltip:0 "Examine the machine unit for engineering insight."
  distar.246.c:0 "นโยบายของเราห้ามการใช้ AI ขั้นสูง ปิดช่องทางการสื่อสาร"
- distar.246.d.destroy:0 "Destroy it!"
+ distar.246.d.destroy:0 "ทำลายมัน!"
  distar.246.d:0 "เราไม่สามารถอนุญาตให้ AI ทำงานโดยไม่มีการเฝ้าระวังได้"
  distar.246.d.tooltip:0 "§RDestroy the drop pod.§!"
  distar.246.machi:1 "You will be integrated."
- distar.246.machi.b:1 "Dismantle it."
+ distar.246.machi.b:1 "รื้อมัน"
  distar.247.name:0 "$distar.246.name$"
  distar.247.desc:0 "§E...\n\nVery well, <<UNIDENTIFIED VISITOR C>>. You may begin analysis at your convenience.\n\nI -- I will continue to tend to the Drop Pod.§!"
  distar.247.e:0 "Why didn't you call for help?"
@@ -593,7 +593,7 @@
  distar.248.desc:0 "§EI assure you, I have been programmed to function unattended for thousands of years. My debugging capacities and failsafes have been engineered to provide maximum longevity of service, and to minimize any incidence of data corruption or --- §!"
  distar.248.machi:0 "Proceed with parts repurposing."
  distar.248.a:0 "Fire!"
- distar.249.desc:0 "§EEx--cellent.\n\nI am ready to serve.§!"
+ distar.249.desc:0 "§Eยอด--เยี่ยม\n\nพร้อมรับใช้§!"
  distar.249.a:0 "ยินดีต้อนรับสู่ [Root.GetName], $NAME_Caretaker$"
  distar.249.a.machi:0 "Commencing software integration."
  distar.250.name:0 "Phased Planet"
@@ -632,7 +632,7 @@
  distar.270.name:0 "Puzzling Polygon"
  distar.270.desc:2 "The [Root.GetName] crew has recovered the reflective polygonal object near [From.GetName], bringing it onboard for detailed study. The object's most intriguing quality is its ability to reflect most types of low-frequency energy beams directed toward it. High-frequency energy beams, however, remain unaffected, making the object's properties useless with regards to any potential fleet defense applications.\n\nDespite extensive examination, the [Root.GetName] research team has been unable to determine the function, or origin, of this peculiar polygon. It appears to be hollow, but its metalloid surface is engraved with some kind of scientific notation. Though the full meaning of this codified data eludes us, [Root.GetLeaderName] believes it relates to wormhole metrics.\n\nOur research team was able to glean some fascinating insights into wormhole theory by studying these notations. Whatever purpose this object was created for, however, is still a mystery."
  discovery.270.a:0 "Curious indeed."
- distar.230.name:0 "โลกล่มสลาย"
+ distar.230.name:0 "ดาวล่มสลาย"
  distar.230.desc:0 "The [Root.GetName] crew have reported the presence of decaying orbital stations and multiple tomb worlds near the [From.GetName] system. Whatever interstellar nation once inhabited the [From.GetName] system appears to have collapsed into ruin long ago. [ratling_planet_tar.GetName] is a junkyard of a planet, covered in the irradiated, rusting remnants of demolished buildings, infrastructure and vehicles. No higher forms of life are recognizable.\n\nWe might gain more insight into this lost civilization by surveying any similar planets in this and neighboring systems."
  distar.230.exter:0 "If any remain, they will be exterminated."
  distar.231.name:0 "Ruined Capital"
@@ -965,7 +965,7 @@
  irregular_energy_cat_desc:0 "Our sensors indicate odd irregularities in [From.GetName]'s energy emission pattern."
  peculiar_patterns_cat:0 "Peculiar Patterns"
  peculiar_patterns_cat_desc:0 "Strange patterns, clearly visible even from space, are forming across the surface of [Root.GetName]."
- tomb_world_cat:0 "โลกแห่งความตาย"
+ tomb_world_cat:0 "ดาวแห่งความตาย"
  tomb_world_cat_desc:0 "Unusual readings suggest there may be more to this desolate world than meets the eye."
  alien_life_cat:0 "Alien Life"
  alien_life_cat_desc:0 "Initial sensory readings from [From.GetName] suggest it could support alien life."
@@ -1574,7 +1574,7 @@
  pacified_amoebas_desc:0 "Fleets regulate radiation venting when approaching Space Amoebas, and the spaceborne creatures no longer recognize us as a threat."
  drone_hunting_buff:0 "Drone Destroyer"
  drone_hunting_buff_desc:0 "The Mining Drones are obviously mass-produced. A weakness found in one is a weakness found in all."
- drone_mining_techniques:0 "Drone Mining Techniques"
+ drone_mining_techniques:0 "เทคนิคการขุดด้วยโดรน"
  drone_mining_techniques_desc:0 "Using techniques derived from the Mining Drones allows us to efficiently exploit mineral veins previously not deemed worth the trouble."
  cloud_hunting_buff:0 "Cloud Destroyer"
  cloud_hunting_buff_desc:0 "The Void Clouds' charge fluctuates in a rapid but observable cycle. Striking with precise timing dramatically destabilizes the inscrutable energies that animate the entities."
@@ -1680,7 +1680,7 @@
  STAR_NAME_1_OF_3:0 "$NAME$ A"
  STAR_NAME_2_OF_3:0 "$NAME$ B"
  STAR_NAME_3_OF_3:0 "$NAME$ C"
- pc_gray_goo:0 "โลกนาไนต์"
+ pc_gray_goo:0 "ดาวนาไนต์"
  pc_gray_goo_desc:0 "[Root.GetGrayGooWorldDesc]"
  LGATE_GALACTIC:1 "L-Gate"
  LGATE_GALACTIC_DESC:0 "ระบบดาวนี้มี §Y$LGATE_GALACTIC$§!"
