--- a/mod/thmod/localisation/english/event_chains_l_english.yml
+++ b/mod/thmod/localisation/english/event_chains_l_english.yml
@@ -38,9 +38,9 @@
  sublight_probes_chain_title:0 "Sublight Exploration Probes"
  sublight_probes_chain_desc:0 "Several sublight exploration probes were dispatched from [Root.Capital.GetName] to neighboring systems before we had mastered FTL travel. They must be recovered before they fall into hostile hands."
  probes_recovered:0 "Probes Recovered"
- survey_habitable_worlds_chain_title:0 "การสำรวจโลกที่สามารถอยู่อาศัยได้"
+ survey_habitable_worlds_chain_title:0 "การสำรวจดาวที่สามารถอยู่อาศัยได้"
  survey_habitable_worlds_chain_desc:0 "นักชีววิทยาต่างดาวของเราเร่งให้เราสำรวจดาวต่างๆที่ยังมีชีวบริเวณ(ส่วนของพื้นผิวและบรรยากาศของดาวที่มีสิ่งมีชีวิตอาศัยอยู่) พวกเขากระตือรือร้นที่จะเรียนรู้เพิ่มเติมเกี่ยวกับระบบนิเวศของมนุษย์ต่างดาวอันหลากหลายที่พบได้ทั่วกาแล็กซี"
- habitable_worlds_surveyed:0 "สำรวจโลกที่สามารถอยู่อาศัยได้ไปแล้ว"
+ habitable_worlds_surveyed:0 "สำรวจดาวที่สามารถอยู่อาศัยได้ไปแล้ว"
  specimen_procurement_chain_title:0 "การหาตัวอย่างต่างดาว"
  specimen_procurement_chain_desc:0 "พิพิธภัณฑ์ชีววิทยานอกพิภพที่้ [Root.Capital.GetName] ได้ขอความช่วยเหลือ ในการรวบรวมตัวอย่างสิ่งมีชีวิต ต่างดาวหายากหลายแบบ ที่ถูกระบุบนดาวที่แตกต่างกัน"
  specimens_collected:0 "เก็บตัวอย่างมาแล้ว"
