--- a/mod/thmod/localisation/english/federations_anniversary_l_english.yml
+++ b/mod/thmod/localisation/english/federations_anniversary_l_english.yml
@@ -953,10 +953,10 @@
  TOAST_ORBITAL_BUILT_DESC: "An Orbital has been constructed in orbit of [target_planet.GetName]"
  d_hab_nanites_1:0 "Nanite Deposit"
  d_hab_nanites_1_desc:1 "This $habitat_complex$ is built near an exploitable source of nanites."
- UNLOCKS_ORBITAL: "§HUnlocks Orbital:§!"
+ UNLOCKS_ORBITAL: "§Hปลดล็อกที่อยู่อาศัยโคจรดาว:§!"
  tech_habitat_1:0 "ที่อยู่อาศัยวงโคจรดาว"
  tech_habitat_1_desc:0 "Allows the construction of largely self-sustaining Orbital Habitats."
- allow_habitats:1 "§HUnlocks Megastructure:§! $habitat_central_complex$\n$UNLOCKS_ORBITAL$ $major_orbital_plural$\n$UNLOCKS_ORBITAL$ $minor_orbital_plural$"
+ allow_habitats:1 "§Hปลดล็อกสิ่งก่อสร้างขนาดมหึมา:§! $habitat_central_complex$\n$UNLOCKS_ORBITAL$ $major_orbital_plural$\n$UNLOCKS_ORBITAL$ $minor_orbital_plural$"
  tech_habitat_2:1 "ขยายที่อยู่อาศัยในอวกาศ"
  tech_habitat_2_desc:0 "Our early habitats were primitive things compared to the efficient designs we can now develop."
  tech_habitat_2_effect:2 "$allow_habitat_upgrade$"
@@ -1012,7 +1012,7 @@
  orbital_MEGASTRUCTURE_DETAILS_ENDING: "is a basic orbital designed to provide additional living and working quarters for the population of the local §Y$habitat_central_complex$§!."
  orbital_DELAYED_START: "- §Y$habitat_central_complex$§!:\n$t$- "
  major_orbital: "Major Orbital"
- major_orbital_plural: "Major Orbitals"
+ major_orbital_plural: "ที่อยู่อาศัยโคจรดาว (หลัก)"
  major_orbital_effect: "£mod_planet_max_districts_add£ Max District Slots: §G+0.50§!\n$t$- $orbital_effect$"
  major_orbital_NAME: "$major_orbital$"
  major_orbital_DESC: "$orbital_DESC_GENERIC$"
@@ -1022,7 +1022,7 @@
  major_planetary_body_requirements: "Must be built in orbit of a major planetary body"
  orbital_effect: "Depending on planetary deposit:\n$tt$- £mod_district_hab_science_max£ §Y$district_hab_science_plural$§!: §G+3§!\n$tt$- £mod_district_hab_energy_max£ §Y$district_hab_energy_plural$§!: §G+3§!\n$tt$- £mod_district_hab_mining_max£ §Y$district_hab_mining_plural$§!: §G+3§!\n$tt$- £mod_planet_max_buildings_add£ §Y$MOD_PLANET_MAX_BUILDINGS_ADD$§!: §G+0.50§!"
  minor_orbital: "Minor Orbital"
- minor_orbital_plural: "Minor Orbitals"
+ minor_orbital_plural: "ที่อยู่อาศัยโคจรดาว (รอง)"
  minor_orbital_effect: "$orbital_effect$"
  minor_orbital_NAME: "$minor_orbital$"
  minor_orbital_DESC: "$minor_orbital_DESC_GENERIC$"
