--- a/mod/thmod/localisation/english/job_concepts_l_english.yml
+++ b/mod/thmod/localisation/english/job_concepts_l_english.yml
@@ -6,7 +6,7 @@
  concept_miner: "$job_miner_plural$"
  concept_miner_desc: "$job_miner_plural$ produce $i_minerals$.\n\n§L$job_miner_desc$§!"
  concept_roboticist: "$job_roboticist_plural$"
- concept_roboticist_desc: "$job_roboticist_plural$ turn $i_alloys$ into new £pop£ §IRobot Pops§!.\n\n§L$job_roboticist_desc$§!"
+ concept_roboticist_desc: "$job_roboticist_plural$ เปลี่ยน $i_alloys$ เป็น £pop£ §Iประชากรหุ่นยนต์§! ใหม่\n\n§L$job_roboticist_desc$§!"
  concept_archaeoengineers: "$job_archaeoengineers_plural$"
  concept_archaeoengineers_desc: "$job_archaeoengineers_plural$ turn $i_consumer_goods$ into $i_research$.\n\n§L$job_archaeoengineers_desc$§!"
  concept_politician: "$job_politician_plural$"
@@ -14,15 +14,15 @@
  concept_colonist: "$job_colonist_plural$"
  concept_colonist_desc: "$job_colonist_plural$ produce a small amount of $i_food$ (or $i_minerals$) and $i_amenities$, and spawn £defense_army£ §YDefense Armies§!.\n\n§L$job_colonist_desc$§!"
  concept_overlord_arborist: "$job_overlord_arborist_plural$"
- concept_overlord_arborist_desc: "$job_overlord_arborist_plural$ turn Subject $i_food$ into $i_food$ for the Overlord.\n\n§L$job_overlord_arborist_desc$§!"
+ concept_overlord_arborist_desc: "$job_overlord_arborist_plural$ เปลี่ยน $i_food$ ของจักรวรรดิบริวารให้เป็น $i_food$ สำหรับจักรวรรดิเจ้าเหนือหัว\n\n§L$job_overlord_arborist_desc$§!"
  concept_replicator: "$job_replicator_plural$"
- concept_replicator_desc: "$job_replicator_plural$ turn $i_alloys$ into new £pop£ §IMachine Pops§!.\n\n§L$job_replicator_desc$§!"
+ concept_replicator_desc: "$job_replicator_plural$ เปลี่ยน $i_alloys$ เป็น £pop£ §Iประชากรเครื่องจักร§! ใหม่\n\n§L$job_replicator_desc$§!"
  concept_spawning_drone: "$job_spawning_drone_plural$"
  concept_spawning_drone_desc: "$job_spawning_drone_plural$ turn $i_food$ (or $i_minerals$) into £mod_planet_amenities_no_happiness_add£ §I$PLANET_AMENITIES_TITLE$§! and £mod_planet_pop_assembly_mult£ §I$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\n\n§L$job_spawning_drone_desc$§!"
  concept_offspring_drone: "$job_offspring_drone_plural$"
  concept_offspring_drone_desc: "$job_offspring_drone_plural$ turn $i_food$ (or $i_minerals$) into £mod_planet_amenities_no_happiness_add£ §I$PLANET_AMENITIES_TITLE$§! and £mod_planet_pop_assembly_mult£ §I$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!, spawn §I$offspring_defense_plural$§!, and provide a £mod_planet_jobs_simple_drone_produces_mult£ §G+10%§! increase in §I$pop_cat_simple_drone$ output§!.\n\n§L$job_offspring_drone_desc$§!"
  concept_offspring_feeder: "$job_overlord_offspring_drone_feeder_plural$"
- concept_offspring_feeder_desc: "$job_overlord_offspring_drone_feeder_plural$ use $i_food$ (or $i_minerals$) provide access to §I$offspring_defense_plural$§! and an increase in £mod_planet_jobs_worker_produces_mult£ §IWorker Pop Resource Output§!.\n\n§L$job_overlord_offspring_drone_feeder_desc$§!"
+ concept_offspring_feeder_desc: "$job_overlord_offspring_drone_feeder_plural$ ใช้ $i_food$ (หรือ $i_minerals$) สามารถการเข้าถึง §I$offspring_defense_plural$§! และ เพิ่มใน £mod_planet_jobs_worker_produces_mult£ §Iผลผลิตที่เป็นทรัพยากรจากประชากรคนงาน§!\n\n§L$job_overlord_offspring_drone_feeder_desc$§!"
  concept_squire: "$job_squire_plural$"
  concept_squire_desc: "$job_squire_plural$ provide $i_amenities$ and increase the §IOutput§! of £job_knight_commander£ §I$job_knight_commander$§! and £job_knight£ §I$job_knight$§! Jobs.\n\n§L$job_squire_desc$§!"
  concept_knight: "$job_knight_plural$"
