--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -1383,23 +1383,23 @@
  job_hunted_pre_sapient_plural:0 "Hunted Pre-Sapients"
  job_hunted_pre_sapient_desc:0 "$job_pre_sapient_desc$"
  mod_job_hunted_pre_sapient_add:0 "$hunted_job_pre_sapient$ Jobs"
- job_xeno_zoo_animal:0 "Conserved Fauna"
+ job_xeno_zoo_animal:0 "อนุรักษ์สัตว์"
  job_xeno_zoo_animal_plural:0 "$job_xeno_zoo_animal$"
  job_xeno_zoo_animal_desc:0 "These near-intelligent fauna are cared for and studied in a controlled environment, ensuring their conservation."
  job_xeno_zoo_animal_effect_desc:0 "£job_xeno_zoo_animal£ $job_xeno_zoo_animal_plural$ บริโภค $r_food$ (หรือ $r_minerals$) และให้ $r_amenities$"
  mod_job_xeno_zoo_animal_add:0 "$job_xeno_zoo_animal$ Jobs"
- job_xeno_zoo_beast:0 "Gladiatorial Beast"
- job_xeno_zoo_beast_plural:0 "Gladiatorial Beasts"
+ job_xeno_zoo_beast:0 "กลาดิเอเตอร์ฝึกสัตว์ร้าย"
+ job_xeno_zoo_beast_plural:0 "กลาดิเอเตอร์ฝึกสัตว์ร้าย"
  job_xeno_zoo_beast_desc:0 "These beasts are pitted in combat against our warriors, entertaining the masses while keeping the bestial population at sustainable levels."
  job_xeno_zoo_beast_effect_desc:0 "£job_xeno_zoo_beast£ $job_xeno_zoo_beast_plural$ บริโภค $r_food$ (หรือ $r_minerals$) และให้ $r_amenities$"
  mod_job_xeno_zoo_beast_add:0 "$job_xeno_zoo_beast$ Jobs"
- job_livestock_zoo_animal:0 "Protected Fauna"
+ job_livestock_zoo_animal:0 "ปกป้องสัตว์"
  job_livestock_zoo_animal_plural:0 "$job_livestock_zoo_animal$"
  job_livestock_zoo_animal_desc:0 "These xenos are cared for and studied in a controlled environment, ensuring their conservation."
  job_livestock_zoo_animal_effect_desc:0 "£job_livestock_zoo_animal£ $job_livestock_zoo_animal_plural$ บริโภค $r_food$ (หรือ $r_minerals$) และให้ $r_amenities$"
  mod_job_livestock_zoo_animal_add:0 "$job_livestock_zoo_animal$ Jobs"
- job_livestock_zoo_beast:0 "Gladiatorial Xeno"
- job_livestock_zoo_beast_plural:0 "Gladiatorial Xenos"
+ job_livestock_zoo_beast:0 "กลาดิเอเตอร์ฝึกนักรบต่างดาว"
+ job_livestock_zoo_beast_plural:0 "กลาดิเอเตอร์ฝึกนักรบต่างดาว"
  job_livestock_zoo_beast_desc:0 "These xenos are pitted in combat against our warriors, entertaining the masses while keeping the bestial population at sustainable levels."
  job_livestock_zoo_beast_effect_desc:0 "£job_livestock_zoo_beast£ $job_livestock_zoo_beast_plural$ บริโภค $r_food$ (หรือ $r_minerals$) และให้ $r_amenities$"
  mod_job_livestock_zoo_beast_add:0 "$job_livestock_zoo_beast$ Jobs"
@@ -2025,7 +2025,7 @@
  d_mineral_fields_desc:1 "Geological upheaval exposed these useful minerals to the planet's surface long ago."
  d_rich_mountain:0 "Rich Mountain"
  d_rich_mountain_desc:1 "These mountainsides glint with rich ore resources and precious stones."
- d_crystal_reef:0 "Crystal Reef"
+ d_crystal_reef:0 "ปะการังคริสตัล"
  d_crystal_reef_desc:1 "Crystal lattices glimmer amongst the rocks and corals of this sandy reef."
  d_prosperous_mesa:0 "Prosperous Mesa"
  d_prosperous_mesa_desc:1 "This flat-topped hill has steep sides lined with useful resources."
@@ -2302,7 +2302,7 @@
  d_satramene_deposit:0 "Satramene Gas discovered\n  £energy£ +4\n"
  d_garanthium_deposit:0 "Garanthium Ore discovered\n  £minerals£ +3\n"
  ap_arcology_project:0 "โครงการเมืองใหญ่ที่อยู่ได้ด้วยตัวเอง"
- ap_arcology_project_desc:1 "เราจะสร้างโลกของเมืองและเมืองของโลก"
+ ap_arcology_project_desc:1 "เราจะสร้างดาวของเมืองและเมืองของดาว"
  allow_arcology_project:0 "§Hปลดล็อกการตัดสินใจ:§! $ap_arcology_project$"
  decision_arcology_project:0 "$ap_arcology_project$"
  decision_arcology_project_effects:1 "เปลี่ยนดาวเคราะห์ให้เป็น §Y$pc_city$§! เพิ่ม £housing£ §Y$PLANET_HOUSING_TITLE$§! §Yการผลิตทรัพยากร§! และ §Yเพิ่มประชากร§! และปลดล็อก £district£ §Yเขตมหานคร§! พิเศษ ทำให้§Rไม่สามารถเข้าถึง§!ทรัพยากรธรรมชาติของดาวได้ ป้องกันการก่อสร้างเพิ่มเติมเขต £district£ §Yเขตกำเนิดไฟฟ้า§! §Yเขตเหมืองแร่§! และ §Yเขตเกษตรกรรม§!"
@@ -2321,17 +2321,17 @@
  decision_demolish_art_monument_desc:1 "Remove the art monument created for our nation by the Artisan Troupe. It will be placed in storage for future use."
  artist_monument_erected:0 "การจัดแสดงอนุสาวรีย์ศิลปะได้เริ่มขึ้นแล้ว"
  artist_monument_erected_desc:0 "A stirring art monument created by the Artisan Troupe is being exhibited on this planet."
- tech_resort_colonies:0 "โลกรีสอร์ต (ที่พักตากอากาศ)"
+ tech_resort_colonies:0 "ดาวรีสอร์ต (ที่พักตากอากาศ)"
  tech_resort_colonies_desc:0 "With careful study devoted to landscaping, climate control, and the science of fun,  construction of entire worlds dedicated to leisure can be made possible."
  tech_penal_colonies:0 "ทัณฑนิคม (อาณานิคมสถานที่คุมขัง)"
  tech_penal_colonies_desc:0 "Through the development of special penal worlds, criminals can be rehabilitated through honest, hard labor. Some may be in need of permanent rehabilitation."
- tech_slave_colonies:0 "โลกทาส"
+ tech_slave_colonies:0 "ดาวทาส"
  tech_slave_colonies_desc:0 "Through the creation of special slave-breeding worlds, we can ensure that we will always have a steady supply of disposable laborers."
- resort_colony:0 "โลกรีสอร์ต"
+ resort_colony:0 "ดาวรีสอร์ต"
  resort_colony_desc:0 "Landscaped to perfection and featuring a fully customizable global weather control system, every facet of this world's design is devoted to providing a wide range of vacation options for citizens in need of relaxation."
  penal_colony:0 "ทัณฑนิคม (อาณานิคมสถานที่คุมขัง)"
  penal_colony_desc:0 "This world is filled with strictly controlled criminals, paying off their debt to society in labor camps. For many, the debt will never be repaid."
- slave_colony:0 "โลกทาส"
+ slave_colony:0 "ดาวทาส"
  slave_colony_desc:0 "This world is purpose-built to maximize the growth rate of its enslaved population."
  resort_colony_other_planets:0 "$resort_colony$"
  penal_colony_other_planets:0 "$penal_colony$"
@@ -2345,7 +2345,7 @@
  decision_expand_preserves: "Expand Preservers"
  decision_expand_preserves_short: "Adds a §YNature Preserve Blocker§! to the planet."
  decision_expand_preserves_desc: "With superior planning and guidance, this planet can serve as a true sanctuary for all ecosystems."
- decision_resort_colony:0 "สร้างโลกรีสอร์ต (ที่พักตากอากาศ)"
+ decision_resort_colony:0 "สร้างดาวรีสอร์ต (ที่พักตากอากาศ)"
  decision_resort_colony_desc:1 "This world is set aside as a peaceful resort world, attracting tourists and visitors from far away. To preserve the planet's natural beauty, construction on the surface is severely limited."
  decision_resort_colony_effects_short:0 "Disables construction of £district£ §YDistricts§! and most £building£ §YBuildings§! on the planet\n\nIncreases £amenities£ §Y$MOD_PLANET_AMENITIES_MULT$§! on all other owned planets"
  decision_resort_colony_no_districts:0 "£trigger_no£ The planet must be unspoiled by district and building development."
@@ -2354,21 +2354,21 @@
  decision_abolish_resort_colony:0 "ยกเลิกดาวเคราะห์รีสอร์ต"
  decision_abolish_resort_colony_desc:1 "This world will no longer be considered a special resort, and all construction restrictions on its surface are lifted."
  resort_colony_empire_effects:0 "อาณานิคมของจักรวรรดิอื่น:\n   $MOD_PLANET_AMENITIES_MULT$: §G+15%§!\n   $MOD_PLANET_IMMIGRATION_PULL_MULT$: §G+15%§!"
- decision_crucible_colony:0 "สร้างโลกแห่งเบ้าหลอม"
+ decision_crucible_colony:0 "สร้างดาวแห่งเบ้าหลอม"
  decision_crucible_colony_desc:0 "This world shall provide a dedicated environment in which the progeny of our cyborg drones can develop to become productive components of the collective."
  decision_crucible_colony_effects_short:0 "Disables construction of some £building£ §YBuildings§! on the planet\n\nIncreases £mod_pop_growth_speed£ §Y$MOD_POP_GROWTH_SPEED$§! in exchange for increased §Y$mod_planet_pops_upkeep_mult$§! and decreased §YResources from Jobs§!"
- decision_abolish_crucible_colony:0 "ยกเลิกโลกแห่งเบ้าหลอม"
+ decision_abolish_crucible_colony:0 "ยกเลิกดาวแห่งเบ้าหลอม"
  decision_abolish_crucible_colony_desc:0 "We shall repurpose this world for other uses."
  decision_crucible_colony_only_one:0 "£trigger_no£ The §Y[Root.Owner.GetName]§! can only have one §Y$crucible_colony$§!."
- crucible_colony:0 "โลกแห่งเบ้าหลอม"
+ crucible_colony:0 "ดาวแห่งเบ้าหลอม"
  crucible_colony_desc:0 "$col_crucible_desc$"
  crucible_colony_effects:0 "£building£ §Yสิ่งปลูกสร้างที่เป็นเมืองหลวง§! §Y£job_replicator£ งาน $job_replicator$§! ถูกแทนที่ด้วย §Y£job_crucible_drone£ งาน $job_crucible_drone$§!"
- decision_slave_colony:0 "สร้างโลกทาส"
+ decision_slave_colony:0 "สร้างดาวทาส"
  decision_slave_colony_desc:0 "This entire world is purpose-built to maximize the growth rate of its enslaved population through a variety of reproductive incentives."
  decision_slave_colony_effects:0 "Disables construction of £housing£ §YCity Districts§! and most £building£ §YBuildings§! on the planet\nAllows construction of £building£ §YSlave Huts§!\n£pop£ §YFree Pops§! can no longer grow on the planet"
  decision_slave_colony_must_have_slave:0 "£trigger_no£ Must have at least one £pop£ Pop from a §YFully Enslaved§! Species on the planet."
  decision_slave_colony_effects_short:0 "Greatly increases §YPop Growth Speed§!\n\nPlanet becomes largely unsuitable for £pop£ §YFree Pops§!"
- decision_abolish_slave_colony:0 "ยกเลิกโลกทาส"
+ decision_abolish_slave_colony:0 "ยกเลิกดาวทาส"
  decision_abolish_slave_colony_desc:0 "This world will no longer be considered a Thrall-World, and growth incentive programs for its shackled population are ended."
  decision_penal_colony:0 "สร้างทัณฑนิคม (อาณานิคมสถานที่คุมขัง)"
  decision_penal_colony_desc:1 "This entire world is set aside as a massive penal colony. The vast prison communities are largely self-managed by the prisoners, and punishment often means exile into the unforgiving wilderness."
@@ -2526,7 +2526,7 @@
  planet_districts_hab_mining:0 "ที่ทำเหมืองแร่บนที่อยู่อาศัยในอวกาศ"
  planet_districts_hab_energy:0 "เขตผลิตพลังงานบนที่อยู่อาศัยในอวกาศ"
  planet_districts_orders_demesne:0 "Habitat Order's Demesne"
- planet_districts_hab: "Habitat Districts"
+ planet_districts_hab: "เขตของที่อยู่อาศัยในอวกาศ"
  planet_districts_arc_arms:0 "เขตอภิมหานครหล่อโลหะ"
  planet_districts_arc_civilian:0 "เขตอภิมหานครโรงงาน"
  planet_districts_rw_generator:0 "$district_rw_generator_plural$"
@@ -2633,7 +2633,7 @@
  mega.200.name:0 "§HEcumenopolis§!: [Root.GetName] Encased"
  mega.200.desc:0 "Layers upon layers of urban sprawl eclipse the globe's crust, and it is done.\n\nScant few years have passed since the start of this grand project, but it is already difficult to recall what the surface of [Root.GetName] was like. Verdant? Rugged? It is all steel now, miles in every direction.\n\nA place once molded by chance and the unthinking laws of nature, now a design wrought from indomitable purpose."
  mega.200.a:0 "Impressive."
- criminal_underworld:0 "โลกมิจฉาชีพอาชญากรรม"
+ criminal_underworld:0 "ดาวมิจฉาชีพอาชญากรรม"
  criminal_underworld_desc:0 "This world is home to a large criminal underworld."
  unemployment_benefits:0 "ให้ผลประโยชน์เพิ่มขึ้น"
  unemployment_benefits_desc:0 "Benefits for the unemployed have been temporarily increased on this world."
@@ -2821,34 +2821,34 @@
  distar.335.desc:0 "For the past 42 years and 3 days, researchers on [Root.Capital.GetName] have eagerly anticipated the countdown of the mysterious atomic clock of prodigious precision, found on [From.From.From.GetName].\n\nNow several decades' worth of heated speculation and conjecture have evaporated in an instant, along with most of [nuked_planet.GetName].\n\nAs the clock reached its momentous deadline it transmitted a signal to a receiver on [nuked_planet.GetName], triggering a thermonuclear explosion of such devastating power it laid waste to the entire planet.\n\nWhile our scientists conjecture as to the reason behind this carefully timed act of annihilation the atomic clock continues to tick, undisturbed by the desolation below."
  planet_culture_shock:0 "$culture_shock_bronze_age$"
  planet_culture_shock_desc:1 "This formerly pre-FTL world is undergoing a chaotic upheaval as it adapts to the abrupt introduction of advanced technology. There are still significant and disruptive holdouts in many isolated regions."
- col_mining:0 "โลกแห่งทำเหมือง"
- col_mining_desc:1 "การระเบิดเหมืองหินและเครื่องจักรกลหนักครอบทั้งพื้นผิวของโลกใบนี้"
- col_farming:0 "โลกเกษตรกรรม"
+ col_mining:0 "ดาวแห่งการทำเหมือง"
+ col_mining_desc:1 "การระเบิดเหมืองหินและเครื่องจักรกลหนักครอบทั้งพื้นผิวของดาวดวงนี้"
+ col_farming:0 "ดาวเกษตรกรรม"
  col_farming_desc:1 "ภูมิทัศน์ของทุ่งหญ้าอันงดงามที่มีพืชผลเฟื่องฟู"
- col_generator:0 "โลกไฟฟ้า"
- col_generator_desc:1 "โรงงานผลิตไฟฟ้าขนาดใหญ่และซับซ้อนไร้ที่สิ้นสุดบนโลกใบนี้"
- col_factory:1 "โลกโรงงาน"
+ col_generator:0 "ดาวไฟฟ้า"
+ col_generator_desc:1 "โรงงานผลิตไฟฟ้าขนาดใหญ่และซับซ้อนไร้ที่สิ้นสุดบนดาวดวงนี้"
+ col_factory:1 "ดาวโรงงาน"
  col_factory_desc:1 "ดาวเคราะห์ดวงนี้เชี่ยวชาญในโรงงาน การปฏิบัติการและอุตสาหกรรมพลเรือน"
  col_factory_custom:1 "§Yเขตอุตสาหกรรม§! จะเปลี่ยนหนึ่งอาชีพจากการผลิตโลหะผสมเป็นผลิตสินค้าอุปโภคบริโภคถ้าเป็นไปได้\n\n"
- col_city:1 "โลกที่เป็นเมือง"
- col_city_desc:1 "โลกที่มีประชากรหนาแน่นซึ่งเป็นมหานครที่มีขนาดใหญ่"
- col_rural:0 "โลกชนบท"
- col_rural_desc:1 "การผลิตของโลกใบนี้ไม่จำเป็นต้องมีศูนย์กลางในเมืองใหญ่ๆ"
- col_industrial:0 "โลกอุตสาหกรรม"
+ col_city:1 "ดาวที่เป็นเมือง"
+ col_city_desc:1 "ดาวที่มีประชากรหนาแน่นซึ่งเป็นมหานครที่มีขนาดใหญ่"
+ col_rural:0 "ดาวชนบท"
+ col_rural_desc:1 "การผลิตของดาวดวงนี้ไม่จำเป็นต้องมีศูนย์กลางในเมืองใหญ่ๆ"
+ col_industrial:0 "ดาวอุตสาหกรรม"
  col_industrial_desc:0 "อุตสาหกรรมหนักที่มีการผลิตแบบผสมผสานครอบครองดาวดวงนี้"
- col_foundry:0 "โลกแห่งการหล่อโลหะ"
- col_foundry_desc:1 "สามารถสัมผัสไอความร้อนของโรงหล่อโลหะผสมได้เกือบทุกที่บนโลกใบนี้"
+ col_foundry:0 "ดาวแห่งการหล่อโลหะ"
+ col_foundry_desc:1 "สามารถสัมผัสไอความร้อนของโรงหล่อโลหะผสมได้เกือบทุกที่บนดาวดวงนี้"
  col_foundry_custom:1 "§Yเขตอุตสาหกรรม§! จะเปลี่ยนหนึ่งอาชีพจากการผลิตสินค้าอุปโภคบริโภคเป็นผลิตโลหะผสมถ้าเป็นไปได้\n\n"
- col_refinery:0 "โลกแห่งการกลั่นสกัด"
+ col_refinery:0 "ดาวแห่งการกลั่นสกัด"
  col_refinery_desc:1 "พื้นผิวดาวเคราะห์ส่วนใหญ่เต็มไปด้วยเครือข่ายท่อโรงกลั่นและโรงสกัดมากมาย พยายามอย่าหายใจเข้าลึกเกินไปนะ"
  col_hive:1 "รังดาวเคราะห์"
  col_hive_desc:1 "เครือข่ายของรังที่เต็มไปทั้งดาว"
  col_rural_gestalt:0 "ดาวแห่งการเกื้อกูล"
- col_rural_gestalt_desc:0 "ดาวเคราะห์ดวงนี้เป็นโลกที่มีประชากรสิ่งมีชีวิตจิตสำนึกร่วม"
+ col_rural_gestalt_desc:0 "ดาวเคราะห์ดวงนี้เป็นดาวที่มีประชากรสิ่งมีชีวิตจิตสำนึกร่วม"
  col_nexus:0 "แหล่งเชื่อมโยงเครื่องจักร"
- col_nexus_desc:1 "เครือข่ายเครื่องจักรกลของหน่วยบริการต่างๆและซ่อมแซมหลายพันหน่วยครอบคลุมพื้นผิวโลกนี้"
- col_research:0 "โลกแห่งการวิจัย"
- col_research_desc:1 "โลกนี้เป็นที่ของการวิจัยทางวิทยาศาสตร์และความก้าวหน้าทางเทคโนโลยี"
+ col_nexus_desc:1 "เครือข่ายเครื่องจักรกลของหน่วยบริการต่างๆและซ่อมแซมหลายพันหน่วยครอบคลุมพื้นผิวดาวนี้"
+ col_research:0 "ดาวแห่งการวิจัย"
+ col_research_desc:1 "ดาวนี้เป็นที่ของการวิจัยทางวิทยาศาสตร์และความก้าวหน้าทางเทคโนโลยี"
  col_capital:0 "ศูนย์กลางจักรวรรดิ"
  col_capital_desc:0 "ดาวเคราะห์ศูนย์กลางของจักรวรรดิระหว่างดวงดาว เป็นที่ตั้งของสิ่งปลูกสร้างของรัฐบาลที่ปกครองจักรวรรดิ สำนักงานและศูนย์บัญชาการใหญ่ของหน่วยงานที่ซับซ้อนมากมาย"
  col_capital_machine:0 "ศูนย์กลางเครื่องจักร"
@@ -2859,23 +2859,23 @@
  col_default_desc:1 "การตั้งถิ่นฐานที่สมดุลและพรมแดนใหม่"
  col_habitat:0 "ที่อยู่อาศัยในอวกาศ"
  col_habitat_desc:1 "เป็นเป็นเมืองที่ถูกสร้างขึ้นเพื่อเป็นที่อยู่อาศัยในห้วงอวกาศ"
- col_fortress:0 "โลกป้อมปราการ"
+ col_fortress:0 "ดาวป้อมปราการ"
  col_fortress_desc:1 "เป็นดาวที่เต็มไปด้วยด้วยการป้องกัน บังเกอร์และฐานที่มั่น สามารถป้องกันการรุกรานจากต่างดาวและความไม่สงบภายในได้"
  col_fe_colony:0 "อาณานิคมจักรวรรดิฟอลเล็น"
  col_fe_colony_desc:1 "Though its empire may be in decline, the level of technological advancement on this world is astounding."
  col_fe_capital:0 "ศูนย์กลางจักรวรรดิฟอลเล็น"
  col_fe_capital_desc:0 "$col_fe_colony_desc$"
- col_resort:0 "โลกรีสอร์ต"
+ col_resort:0 "ดาวรีสอร์ต"
  col_resort_desc:2 "A tranquil, weather-controlled resort world with beautiful nature that has not yet been scarred by large-scale development."
- col_slave:0 "โลกทาส"
+ col_slave:0 "ดาวทาส"
  col_slave_desc:0 "This world is purpose-built to maximize the growth rate of its enslaved population."
  col_penal:0 "ทัณฑนิคม (อาณานิคมที่คุมขัง)"
  col_penal_desc:1 "A bleak penal colony, filled with criminals paying off their debt to society in labor camps."
- col_primitive:0 "โลกดึกดำบรรพ์"
+ col_primitive:0 "ดาวดึกดำบรรพ์"
  col_primitive_desc:1 "This planet is home to a developing pre-FTL civilization."
- col_infested:0 "โลกที่ถูกรบกวน"
+ col_infested:0 "ดาวที่ถูกรบกวน"
  col_infested_desc:0 "ดาวเคราะห์ดวงนี้ถูกรบกวนโดย Prethoryn Scourge"
- col_contingency:0 "โลกแห่งความไม่แน่นอน"
+ col_contingency:0 "ดาวแห่งความไม่แน่นอน"
  col_contingency_desc:0 "ดาวเคราะห์ดวงนี้ถูกยึดครองโดยความไม่แน่นอน"
  col_ecu_mix:0 "ดาวอภิมหานคร"
  col_ecu_mix_desc:0 "ดาวเคราะห์นี้ไม่ได้มีความเชี่ยวชาญในอุตสาหกรรมใดอุตสาหกรรมหนึ่งโดยเฉพาะ"
@@ -2887,15 +2887,15 @@
  col_ecu_factory_desc:0 "A vast city-planet that specializes in the ceaseless production of consumer goods"
  col_ecu_research:0 "ดาวอภิมหานครแห่งการวิจัย"
  col_ecu_research_desc:0 "A vast city-planet that specializes in the latest cutting-edge research"
- col_mac:0 "โลกเครื่องจักร"
+ col_mac:0 "ดาวเครื่องจักร"
  col_mac_desc:0 "A machine world that has not been specialized for any particular production type"
- col_mac_foundry:0 "โลกเครื่องจักร (โรงหล่อ)"
+ col_mac_foundry:0 "ดาวเครื่องจักร (โรงหล่อ)"
  col_mac_foundry_desc:0 "An enormous planet-sized machine, designated to produce vast amounts of alloys"
- col_mac_factory:0 "โลกเครื่องจักร (โรงงานอุตสาหกรรม)"
+ col_mac_factory:0 "ดาวเครื่องจักร (โรงงานอุตสาหกรรม)"
  col_mac_factory_desc:0 "An enormous planet-sized machine, designated to produce vast amounts of consumer goods"
- col_hiv:0 "โลกที่เป็นรัง"
+ col_hiv:0 "ดาวที่เป็นรัง"
  col_hiv_desc:0 "A planet-sized organism that has not been specialized for any particular production type"
- col_hiv_foundry:0 "โรงหล่อโลกที่เป็นรัง"
+ col_hiv_foundry:0 "โรงหล่อดาวที่เป็นรัง"
  col_hiv_foundry_desc:0 "A planet-sized organism, designated to produce vast amounts of alloys"
  col_habitat_research:0 "สถานีการวิจัย"
  col_habitat_research_desc:0 "เป็นเมืองที่ถูกสร้างขึ้นเพื่อการวิจัยในห้วงอวกาศ"
@@ -2927,7 +2927,7 @@
  col_ring_mix_desc:0 "An immense ringworld, its massive area spread between all matters of produce"
  col_default_machine:0 "อาณานิคม"
  col_default_machine_desc:1 "A new colony of our empire, purposely designed for frictionless, everyday efficiency."
- col_crucible:0 "โลกแห่งเบ้าหลอม"
+ col_crucible:0 "ดาวแห่งเบ้าหลอม"
  col_crucible_desc:0 "A world dedicated to the growth of cyborg drones, ensuring the progeny will quickly become productive components of the collective."
  col_pre_ftl_atomic:0 "$atomic_age$"
  col_pre_ftl_atomic_desc:0 "$col_primitive_desc$"
@@ -4240,7 +4240,7 @@
  GetPurgeProcessingResource_minerals:2 "metal ingots, boosting £minerals£ §HMinerals§!"
  trait_pc_hive_preference:0 "ชอบอยู่ศัยในโลกที่เป็นรัง"
  trait_pc_hive_preference_desc:0 "$trait_pc_arctic_preference_desc$"
- trait_pc_machine_preference:0 "ชอบอยู่ศัยในโลกเครื่องจักร"
+ trait_pc_machine_preference:0 "ชอบอยู่ศัยในดาวเครื่องจักร"
  trait_pc_machine_preference_desc:0 "$trait_pc_arctic_preference_desc$"
  civic_tooltip_warrior_culture_effects:2 "- แทนที่ £job_entertainer£ งาน §H$job_entertainer$§! ด้วย £job_duelist£ งาน §H$job_duelist$§!\n£job_duelist£ §H$job_duelist_plural$§! เปลี่ยน £alloys£ §H$alloys$§! เป็น £unity£ §H$unity$§!, £mod_planet_amenities_add£ §H$PLANET_AMENITIES_TITLE$§! และ £mod_country_naval_cap_add£ §H$MOD_COUNTRY_NAVAL_CAP_ADD$§!\n- แทนที่ £job_xeno_zoo_animal£ งาน §H$job_xeno_zoo_animal$§! ด้วย £job_xeno_zoo_beast£ งาน §H$job_xeno_zoo_beast$§!"
  RESTORE_JOBS:0 "คืนงาน £job£"
