--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -87,9 +87,9 @@
  MOD_DIPLO_WEIGHT_POPS_MULT:0 "น้ำหนักทางการทูตจากประชากร"
  MOD_DIPLO_WEIGHT_ENVOYS_MULT:0 "น้ำหนักทางการทูตจากทูต"
  MOD_DIPLO_WEIGHT_COUNCIL_MULT:0 "น้ำหนักทางการทูตจากสภา"
- MOD_DIPLO_WEIGHT_OPPOSING_MULT: "Diplomatic Weight When Opposing Resolutions"
- MOD_DIPLO_WEIGHT_SUPPORTING_MULT: "Diplomatic Weight When Supporting Resolutions"
- MOD_DIPLO_WEIGHT_RIVALS_MULT: "Diplomatic Weight Per Rival"
+ MOD_DIPLO_WEIGHT_OPPOSING_MULT: "น้ำหนักทางการทูตเมื่อลงมติในญัตติของฝ่ายตรงข้าม"
+ MOD_DIPLO_WEIGHT_SUPPORTING_MULT: "น้ำหนักทางการทูตเมื่อลงมติในญัตติของฝ่ายที่สนับสนุน"
+ MOD_DIPLO_WEIGHT_RIVALS_MULT: "น้ำหนักทางการทูตต่อจำนวนคู่แข่ง"
  MOD_DIPLO_WEIGHT_MULT:0 "น้ำหนักทางการทูต"
  MOD_DISTANCE_TO_CAPITAL_STATIC_MODIFIER_EFFICIENCY_MULT:0 "โทษเนื่องจากระยะห่างจากศูนย์กลางจักรวรรดิ (Capital)"
  MOD_COUNTRY_ASCENSION_PERKS_ADD:1 "ปลดล็อกการยกระดับ"
@@ -114,8 +114,8 @@
  MOD_COUNTRY_EXPANSION_DISTANCE_MULT:0 "ระยะทางการขยายเขตแดน"
  MOD_COUNTRY_CLAIM_DISTANCE_MULT:0 "ระยะทางการอ้างสิทธิ์"
  MOD_COUNTRY_GOVERNMENT_CIVIC_POINTS_ADD:0 "ช่องพลเมือง"
- MOD_COUNTRY_STARBASE_INFLUENCE_COST_MULT:0 "ค่าอิทธิพลที่ใช้ในฐานอวกาศ"
- MOD_COUNTRY_STARBASE_INFLUENCE_COST_DISTANCE_MULT:0 "Starbase Influence Distance Cost"
+ MOD_COUNTRY_STARBASE_INFLUENCE_COST_MULT:0 "ค่าอิทธิพลที่ใช้เพื่อสร้างฐานอวกาศ"
+ MOD_COUNTRY_STARBASE_INFLUENCE_COST_DISTANCE_MULT:0 "ค่าอิทธิพลที่ใช้เพื่อสร้างฐานอวกาศในระยะไกล"
  MOD_COUNTRY_TRADE_FEE:0 "ค่าธรรมเนียมตลาด"
  MOD_COUNTRY_SLAVE_MARKET_COST_MULT:0 "ค่าใช้จ่ายตลาดค้าทาส"
  MOD_COUNTRY_MEGASTRUCTURE_BUILD_CAP_ADD:0 "ความจุของการสร้างสิ่งก่อสร้างขนาดมหึมา"
@@ -678,8 +678,8 @@
  mod_ship_science_cost_mult:0 "ค่าใช้จ่ายในการสร้างยานวิจัยวิทยาศาสตร์"
  mod_ship_constructor_cost_mult:0 "ค่าใช้จ่ายในการสร้างยานก่อสร้าง"
  mod_ship_colonizer_cost_mult:0 "ค่าใช้จ่ายในการสร้างยานอาณานิคม"
- mod_ship_colonizer_food_cost_add: "Colony Ship £food£ Food Build Cost"
- mod_ship_colonizer_alloys_cost_mult: "Colony Ship £alloys£ Alloys Build Cost"
+ mod_ship_colonizer_food_cost_add: "ค่าใช้จ่ายในการสร้างยานอาณานิคม £food£ อาหาร"
+ mod_ship_colonizer_alloys_cost_mult: "ค่าใช้จ่ายในการสร้างยานอาณานิคม £alloys£ โลหะผสม"
  mod_ship_military_station_medium_cost_mult:0 "ค่าใช้จ่ายในการสร้างสถานีป้องกัน"
  mod_ship_military_station_large_cost_mult:0 "ค่าใช้จ่ายในการสร้างป้อม"
  mod_ship_terraform_station_cost_mult:0 "ค่าใช้จ่ายในการสร้างสถานีปรับสภาพดาว"
@@ -975,12 +975,12 @@
  mod_pc_ocean_habitability:0 "การอยู่อาศัยได้ในมหาสมุทร"
  mod_pc_tundra_habitability:0 "การอยู่อาศัยได้ในที่ราบที่มีอากาศหนาว"
  mod_pc_arctic_habitability:0 "การอยู่อาศัยได้ในสภาพหนาวจัด"
- mod_pc_nuked_habitability:0 "การอยู่อาศัยได้ในโลกแห่งความตาย"
- mod_pc_ai_habitability:0 "การอยู่อาศัยได้ในโลกเครื่องจักร"
- mod_pc_gaia_habitability:0 "การอยู่อาศัยได้ในโลกไกอา"
+ mod_pc_nuked_habitability:0 "การอยู่อาศัยได้ในดาวแห่งความตาย"
+ mod_pc_ai_habitability:0 "การอยู่อาศัยได้ในดาวเครื่องจักร"
+ mod_pc_gaia_habitability:0 "การอยู่อาศัยได้ในดาวไกอา"
  mod_pc_ringworld_habitable_habitability:0 "การอยู่อาศัยได้ในพิภพวงแหวน (โลกวงแหวน)"
- mod_pc_savannah_habitability:0 "การอยู่อาศัยได้ในโลกทุ่งหญ้าขนาดใหญ่ในเขตร้อน"
- mod_pc_alpine_habitability:0 "การอยู่อาศัยได้ในโลกที่มีเทือกเขาสูง"
+ mod_pc_savannah_habitability:0 "การอยู่อาศัยได้ในดาวทุ่งหญ้าขนาดใหญ่ในเขตร้อน"
+ mod_pc_alpine_habitability:0 "การอยู่อาศัยได้ในดาวที่มีเทือกเขาสูง"
  mod_pc_habitat_habitability:0 "การอยู่อาศัยได้ในที่อยู่อาศัยในอวกาศ"
  mod_pc_shattered_ring_habitable_habitability:0 "Shattered Ring Habitability"
  MOD_HABITABILITY_FLOOR:0 "Species Minimum Habitability"
@@ -1044,7 +1044,7 @@
  triggered_opinion_of_authoritarian:1 "Authoritarian Tyrants"
  opinion_from_personality:0 "บุคลิกภาพ [Root.GetPersonalityName]"
  opinion_desecrated_holy_world:0 "ดาวเคราะห์ศักดิ์สิทธิ์ที่ถูกทอดทิ้ง"
- opinion_desecrated_tomb_world:0 "โลกแห่งความตายที่ถูกทอดทิ้ง"
+ opinion_desecrated_tomb_world:0 "ดาวแห่งความตายที่ถูกทอดทิ้ง"
  opinion_researching_ai:1 "ตามหาหุ่นยนต์ AI"
  opinion_encroaching_borders:0 "Encroaching Borders"
  opinion_fanatic_purifiers_vs_xeno:0 "ความโสโครกของต่างดาว"
@@ -1179,7 +1179,7 @@
  triggered_opinion_relic_omnicodex:0 "$r_omnicodex$"
  triggered_opinion_crusader_spirit:0 "$civic_crusader_spirit$"
  triggered_opinion_crusader_spirit_pos:0 "$civic_crusader_spirit$"
- capital:0 "โลกศูนย์กลางจักรวรรดิ"
+ capital:0 "ดาวศูนย์กลางจักรวรรดิ"
  capital_desc:0 "The Capital planet of an interstellar empire is a vast complex of government buildings, bureaus and agency headquarters."
  distance_from_capital:0 "ระยะทางจากศูนย์กลาง"
  managed_by_sector:0 "ถูกบริหารโดยเซ็กเตอร์"
@@ -1309,7 +1309,7 @@
  hollow_planet_desc:0 "This planet has either been artificially created or was somehow hollowed out. How or why we do not know, but investigating it promises to be fascinating."
  mineral_rich:1 "แร่ธาตุคุณภาพสูง"
  mineral_rich_desc:1 "An abundance of high quality minerals in this planet's crust makes mining here a lucrative business."
- titanic_life:0 "Titanic Life"
+ titanic_life:0 "สิ่งมีชีวิตขนาดใหญ่"
  titanic_life_desc:0 "The lifeforms of this planet are built on a massive scale and can be incredibly dangerous even without meaning any harm."
  eat_the_titans:0 "ไททันแสนอร่อย"
  eat_the_titans_desc:0 "Harvesting the Titanic life for research data has had an unexpected side benefit: They taste great!"
@@ -1337,13 +1337,13 @@
  robot_workers_desc:0 "Robot workers from a forgotten civilization remain on this planet. With the proper precautions, they could be put to work for us."
  ancient_forgeworld:0 "Ancient Forgeworld"
  ancient_forgeworld_desc:0 "This planet was once some kind of center of production for a forgotten civilization. Although only a shadow of its former capacity remains in working condition, it is still an impressive example of industry."
- holy_planet:0 "โลกศักดิ์สิทธิ์"
+ holy_planet:0 "ดาวศักดิ์สิทธิ์"
  holy_planet_desc:0 "This planet is considered sacred by a nearby Fallen Empire. Colonizing it will anger them greatly."
  ancient_weapon:0 "Ancient Orbital Weapon"
  ancient_weapon_desc:0 "It seems that some long-forgotten race once build some kind of huge weapon in orbit above this world. While it doesn't work, indeed it doesn't appear to have been completed, we can likely learn a few things by studying it."
  terraforming_candidate:0 "สามารถปรับสภาพดาวได้"
- terraforming_candidate_desc:0 "แม้ว่าจะแห้งแล้งและไร้สิ่งมีชีวิต แต่ดาวดวงนี้ก็มีน้ำในรูปแบบที่เป็นน้ำแข็งและครั้งหนึ่งอาจเคยเป็นที่ตั้งของระบบนิเวศที่เจริญรุ่งเรือง ด้วยเทคโนโลยีที่เหมาะสม มันสามารถปรับเปลี่ยนให้กลายเป็นโลกที่อาศัยอยู่ได้"
- terraforming_candidate_tooltip:0 "เมื่อเราค้นคว้าเทคโนโลยี £society£ §Y$tech_climate_restoration$§! เสร็จแล้ว เราจะสามารถแปลงโฉมดาวเคราะห์ดวงนี้ให้กลายเป็นโลกที่อยู่อาศัยได้"
+ terraforming_candidate_desc:0 "แม้ว่าจะแห้งแล้งและไร้สิ่งมีชีวิต แต่ดาวดวงนี้ก็มีน้ำในรูปแบบที่เป็นน้ำแข็งและครั้งหนึ่งอาจเคยเป็นที่ตั้งของระบบนิเวศที่เจริญรุ่งเรือง ด้วยเทคโนโลยีที่เหมาะสม มันสามารถปรับเปลี่ยนให้กลายเป็นดาวที่อาศัยอยู่ได้"
+ terraforming_candidate_tooltip:0 "เมื่อเราค้นคว้าเทคโนโลยี £society£ §Y$tech_climate_restoration$§! เสร็จแล้ว เราจะสามารถแปลงโฉมดาวเคราะห์ดวงนี้ให้กลายเป็นดาวที่อยู่อาศัยได้"
  frozen_terraforming_candidate:0 "สามารถปรับสภาพดาวหนาวจัดได้"
  frozen_terraforming_candidate_desc:0 "Though cold to the point of being unable to sustain life, the frozen water on this world could allow us to terraform it into a habitable world, if we can find the right method."
  frozen_terraforming_candidate_tooltip:0 "If we pick the §Y$ap_hydrocentric$§! ascension perk and research the £society£ §Y$tech_climate_restoration$§! technology, we will be able to terraform this planet into a habitable world."
@@ -1491,7 +1491,7 @@
  mod_ROBOT_species_trait_points_add:0 "แต้มการปรับเปลี่ยนหุ่นยนต์"
  mod_MACHINE_species_trait_points_add:0 "แต้มการปรับเปลี่ยนเครื่องจักร"
  mod_BIOLOGICAL_species_trait_points_add:0 "$species_trait_points_add$"
- mod_pc_machine_habitability:0 "การอยู่อาศัยได้ในโลกเครื่องจักร"
+ mod_pc_machine_habitability:0 "การอยู่อาศัยได้ในดาวเครื่องจักร"
  mod_pc_hive_habitability:0 "การอยู่อาศัยได้ในโลกที่เป็นรัง"
  MOD_POSTFIX_PERCENT:1 "%"
  SPECIES_TRAIT_PICKS:0 "คุณลักษณะของเผ่าพันธุ์ที่สามารถเลือกได้"
@@ -1545,7 +1545,7 @@
  MOD_CATAPULT_RANGE_BASE:0 "เครื่องเหวี่ยงกองยานควอนตัม ระยะทำการ (พื้นฐาน)"
  MOD_CATAPULT_RANGE_MULT:0 "เครื่องเหวี่ยงกองยานควอนตัม ระยะทำการ"
  mod_quantum_catapult_megastructure_bypass_windup_mult:0 "เครื่องเหวี่ยงกองยานควอนตัม สิ้นสุด"
- mod_country_society_research_cost_mult:0 "Society research Upkeep"
+ mod_country_society_research_cost_mult:0 "ค่าบำรุงรักษาที่เป็นการวิจัยทางสังคม"
  mod_country_consumer_goods_cost_mult:0 "ค่าบำรุงรักษาที่เป็นสินค้าอุปโภคบริโภค"
  contact_with_MSI_01:1 "Troubled Past"
  contact_with_MSI_02:1 "$contact_with_MSI_01$"
