--- a/mod/thmod/localisation/english/nemesis_content_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_content_l_english.yml
@@ -1657,7 +1657,7 @@
  custodian.32.a:0 "Their vigilance is commendable."
  custodian.35.name:0 "GDF Reports to Custodian"
  custodian.35.desc:0 "As we have assumed the office of the Galactic Custodian, the Galactic Defense Force has been folded into our command structure. They will now look to us for future orders."
- custodian.35.a:0 "Very good."
+ custodian.35.a:0 "ดีมาก"
  custodian.35.tooltip:0 "All GDF fleets are now under our command."
  custodian.40.name:0 "The GDF Disbands"
  custodian.40.desc:0 "By order of the Senate majority, the §HGalactic Defense Force§! has been disbanded. All serving GDF personnel have returned to their home nations, and their warships are being scuttled under the close supervision of Senate officials to prevent them from falling into the wrong hands."
