--- a/mod/thmod/localisation/english/overlord_enclaves_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_enclaves_l_english.yml
@@ -763,7 +763,7 @@
  enclave.7110.desc:0 "A most interesting story. §YVeilfarer§!, you said? In some ways, this coven does resemble our own, but while these differences may appear subtle to the uninitiated, they are profound: a distorted reflection, from an universe not quite like our own.\n\nThe Shroud has many tears on its surface. Those who enter its mysteries may not always end up in the same universe from whence they started."
  enclave.7110.a:0 "Psionic travel across dimensions... Fascinating."
  enclave.7110.a.tooltip:0 "§PPsi Jump Drive technology§! now appears at §Y1.5§! times the normal rate."
- decision_shroudwalker_teacher:0 "Shroudwalker Teacher"
+ decision_shroudwalker_teacher:0 "ครูผู้นำทางสู่ดินแดนแห่งจิต"
  decision_shroudwalker_teacher_desc:0 "An adept of the [shroudwalker_enclave_country.GetName] is on planet, instructing in the ways of the Shroud."
  pm_shroudwalker_teacher:0 "$decision_shroudwalker_teacher$"
  pm_shroudwalker_teacher_desc:0 "$decision_shroudwalker_teacher_desc$"
@@ -778,9 +778,9 @@
  shroudwalker_zro_tithe_desc:0 "The [shroudwalker_enclave_country.GetName] taught us how to harvest Zro. In exchange, we have sworn to give them a tenth of all our Zro production."
  shroudwalker_teacher_desc: "$leader_trait_shroudwalker_desc$"
  shroudwalker_teacher_catch_phrase: "§L"The secrets of the Shroud shall be uncovered in time."§!"
- leader_trait_shroudwalker: "Shroudwalker Teacher"
+ leader_trait_shroudwalker: "ครูผู้นำทางสู่ดินแดนแห่งจิต"
  leader_trait_shroudwalker_desc: "An adept of the [shroudwalker_enclave_country.GetName], skilled in instructing in the ways of the Shroud."
- councilor_shroudwalker_teacher: "Shroudwalker Teacher"
+ councilor_shroudwalker_teacher: "ครูผู้นำทางสู่ดินแดนแห่งจิต"
  councilor_shroudwalker_teacher_female: "$councilor_shroudwalker_teacher$"
  councilor_shroudwalker_teacher_desc: "An adept of the [shroudwalker_enclave_country.GetName] serves on the council, instructing in the ways of the Shroud."
  councilor_shroudwalker_teacher_unlock_title: "§HCouncil Position from the [shroudwalker_enclave_country.GetName]§!"
