--- a/mod/thmod/localisation/english/overlord_subjects_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_subjects_l_english.yml
@@ -489,7 +489,7 @@
  holding_splinter_hive_desc:1 "A large biomass producing new workers for the hive. Though it stands apart from the original hive, it is still connected to the neural network."
  holding_distributed_processing:0 "Distributed Processing"
  holding_distributed_processing_desc:1 "A cold structure eclipsing the local region. Those who work here refuse to elaborate on what they do, but no-one leaves the experience entirely unscathed."
- holding_offspring_nest:0 "Offspring Nest"
+ holding_offspring_nest:0 "รังลูก"
  holding_offspring_nest_desc:2 "At this nest, a foreign hivemind has a unique representative acting as a centralized node for its neural network. This has enabled its continued control over the colony."
  holding_offworld_foundry:0 "Offworld Foundry"
  holding_offworld_foundry_desc:0 "Large foundries owned by a foreign empire, siphoning off local resources for the creation of high quality alloys."
@@ -520,7 +520,7 @@
  holding_park_ranger_lodge_desc:0 "The Overlord has an interest in co-existing with nature and wishes to spread this joy to its Vassal. To ensure that there always is at least some nature left to enjoy."
  no_free_district_for_ranger_lodge:0 "$TRIGGER_FAIL$§RNo untouched nature remains on this planet for us to protect.§!"
  blocker_tied_to_ranger_lodge:0 "$TRIGGER_FAIL$§RThis blocker will remain as long as the §Y$holding_park_ranger_lodge$§! Holding exists.§!"
- holding_tree_of_life_sapling:1 "Tree of Life Sprout"
+ holding_tree_of_life_sapling:1 "หน่ออ่อนต้นไม้แห่งชีวิต"
  holding_tree_of_life_sapling_desc:0 "The Overlord has existed with their Tree of Life for so long that they can no longer imagine life without it. Now, they want to share the same opportunity with their vassals."
  holding_franchise_headquarters:0 "Franchise Headquarters"
  holding_franchise_headquarters_desc:0 "These offices allow Corporate Management to realign the Subsidiary's interests with that of their Overlord through mandatory planet-wide training and team-building exercises."
