--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -11,7 +11,7 @@
  leader_desc_scientist:0 "§Eสามารถแต่งตั้ง §Hนักวิทยาศาสตร์§! ให้คุม §Hยานวิจัยวิทยาศาสตร์§! ควบคู่ไปกับ §Hตำแหน่งในสภา§! ในเวลาเดียวกันได้§!"
  leader_desc_general:0 "§Eสามารถแต่งตั้ง §Hพลเอก§! ให้คุม §Hกองทัพบก(จู่โจม)§! ควบคู่ไปกับ §Hตำแหน่งในสภา§! ในเวลาเดียวกันได้§!"
  leader_desc_governor:0 "§Eสามารถแต่งตั้ง §Hผู้ว่าการ§! ให้ปกครอง §Hดาวเคราะห์§! ควบคู่ไปกับ §Hตำแหน่งในสภา§! ในเวลาเดียวกันได้§!"
- EXTERNAL_POOL_AVAILABILITY_TITLE:0 "$NAME|Y$ is available as an external leader due to:"
+ EXTERNAL_POOL_AVAILABILITY_TITLE:0 "$NAME|Y$ เป็นผู้นำจากภายนอกเนื่องจาก:"
  FROM_DEFENDING_GENERAL:0 "Defending General $NAME|H$:\n"
  FROM_ATTACKING_GENERAL:0 "Attacking General $NAME|H$:\n"
  PLANET_COMBAT_WIDTH:0 "Planet Combat Width: $VALUE|H$"
@@ -581,7 +581,7 @@
  SPIRITUALIST_ICON:0 "£spiritualist£"
  MATERIALIST_ICON:0 "£materialist£"
  GOTO_LEADER:0 "§H$GOTO$§! §GGo to the Leader.§!"
- LEADER_UI_DISMISS_ENABLED:0 "Dismiss §Y$LEADER_NAME$§!"
+ LEADER_UI_DISMISS_ENABLED:0 "ปลด §Y$LEADER_NAME$§!"
  LEADER_BACKGROUND_DESC:0 "§Y[Root.GetName]§! จาก §Y$PLANET$§!, โดยที่[Root.GetSheHe]เคยดำรงตำแหน่ง $JOB$"
  LEADER_ETHIC:0 "§Hจริยธรรม§!\n$ETHIC|Y$\n$SEPARATOR$\n§Eในขณะที่ผู้นำ §Yสภา§! §Hให้การดึงดูดจริยธรรม§! §Y$@council_ethic_attraction|%0$§! ต่อจริยธรรมของเขา§!"
  ETHIC_A:0 ""
@@ -686,7 +686,7 @@
  leader_trait_gifted_desc:1 "This leader has a quick mind, grasping demanding concepts with ease."
  trait_imperial_heir:1 "[triggered_imperial_name]"
  trait_imperial_heir_desc:1 "[triggered_imperial_desc]"
- trait_imperial_heir_effects: "$t$Does not have any $r_unity$ Upkeep."
+ trait_imperial_heir_effects: "$t$ไม่มีค่าบำรุงรักษาใดๆที่เป็น $r_unity$"
  imperial_heir:0 "รัชทายาท"
  imperial_heir_desc:0 "The heir is next in line to rule the Empire."
  imperial_ruler:0 "ผู้ปกครองอิมพีเรียล"
@@ -1308,13 +1308,13 @@
  leader_trait_psionic_desc:1 "This leader possesses powerful psionic abilities."
  leader_trait_chosen:0 "ผู้ถูกเลือก"
  leader_trait_chosen_desc:0 "This leader is the Chosen One, an immortal being that wields incredible psionic power."
- leader_trait_whisperers_chosen:0 "Chosen of the Whisperers"
+ leader_trait_whisperers_chosen:0 "ผู้ถูกเลือกจากผู้กระซิบ"
  leader_trait_whisperers_chosen_desc:1 "This leader has been chosen to wield the power of an inscrutable Shroud entity. Sustained by eldritch energies, death is now foreign to them."
- leader_trait_eater_chosen:0 "Chosen of the Eater"
+ leader_trait_eater_chosen:0 "ผู้ถูกเลือกจากผู้ทำลาย"
  leader_trait_eater_chosen_desc:0 "$leader_trait_whisperers_chosen_desc$"
- leader_trait_composer_chosen:0 "Chosen of the Composer"
+ leader_trait_composer_chosen:0 "ผู้ถูกเลือกจากผู้สร้าง"
  leader_trait_composer_chosen_desc:0 "$leader_trait_whisperers_chosen_desc$"
- leader_trait_instrument_chosen:0 "Chosen of the Instrument"
+ leader_trait_instrument_chosen:0 "ผู้ถูกเลือกจากผู้บรรเลงดนตรี"
  leader_trait_instrument_chosen_desc:0 "$leader_trait_whisperers_chosen_desc$"
  planet_anglers:0 "Angler Jobs"
  mod_planet_anglers_produces_mult:0 "£job_angler£ Angler Output"
