--- a/mod/thmod/localisation/english/paragon_3_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_3_l_english.yml
@@ -631,9 +631,9 @@
  approach_situation_paragon_skrand_none_tt:0 "The project will be halted until such a time as we can afford it."
  situation_paragon_skrand_balanced_researchers:0 "Sustainable financing will allow the project to move forward without overburdening our economy. Our progress is based on the number of scientists working on this project."
  situation_paragon_skrand_low_researchers:0 "Low funding will slow progress considerably, but can be useful in times of economic crisis. Our progress is based on the number of scientists working on this project."
- origin_legendary_leader:0 "Under One Rule"
+ origin_legendary_leader:0 "ภายใต้กฎข้อเดียว"
  origin_legendary_leader_desc:1 "Amidst violence and hardship, this civilization was unified by a single leader. Consolidating power through the repression of weaker factions, they have now become a fierce advocate for science and technological advancement. In the aftermath, an uneasy peace has descended. But peace rarely lasts."
- origin_tooltip_legendary_leader_effects:2 "- $SPECIES_TRAITS$ ['concept_perfected_genes'] $NEW_LINE$- Ruler Traits: ['concept_leader_trait_legendary_leader']"
+ origin_tooltip_legendary_leader_effects:2 "- $SPECIES_TRAITS$ ['concept_perfected_genes'] $NEW_LINE$- คุณลักษณะผู้ปกครอง: ['concept_leader_trait_legendary_leader']"
  START_SCREEN_LEGENDARY_LEADER:1 "Our civilization has always been prone to conflict. Empires and kingdoms rose, but never lasted, always collapsing under the pressure of internal strife.\n\nThis culture of polarization climaxed when our world was consumed by war. Amidst chaos, a leader emerged. The [owner.Ruler.GetTitle] [owner.Ruler.GetName] managed to assemble a gathering of followers who were drawn to [owner.Ruler.GetHisHer] selflessness, charisma and authority. Finally someone was poised to unite us.\n\nThe Unification was a long and painful process, but one after another the warring factions eventually surrendered and fell in line, cowed by the [owner.Ruler.GetTitle]'s promises of a future amongst the stars. For the first time in centuries, we have peace, but under the surface, the scars of the old grievances run deep."
  origin_legendary_leader_imperial:0 "$origin_legendary_leader$"
  origin_legendary_leader_imperial_desc:0 "$origin_legendary_leader_desc$"
@@ -717,7 +717,7 @@
  maven_cruiser_01:0 "Experimental Cruiser"
  maven_cruiser_01_plural:0 "Experimental Cruisers"
  NAME_PARAGON_ORIGIN_CRUISER:0 "Anvil"
- leader_trait_legendary_leader:0 "Luminary"
+ leader_trait_legendary_leader:0 "ผู้นำในตำนาน"
  leader_trait_legendary_leader_desc:2 "§GThe Luminary grows in power over time.§!\n\nThe Unification Wars were a brutal affair. In the end, [Root.GetName] brought peace and purpose to us all. The Luminary is the living symbol of what our species can achieve, and an inspiration to all.[This.Paragon_Origin_Ascension_Desc]"
  leader_trait_legendary_offspring:0 "$leader_trait_legendary_leader$ Bloodline"
  leader_trait_legendary_offspring_desc:1 "The Heir to the $leader_trait_legendary_leader$. Living up to their predecessor's legacy will be a challenge, but this leader already shows great promise."
