--- a/mod/thmod/localisation/english/paragon_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_l_english.yml
@@ -772,7 +772,7 @@
  councilor_death_cult:0 "อัครสาวกแห่งความตาย"
  councilor_death_cult_female:0 "$councilor_death_cult$"
  councilor_death_cult_desc:1 "The $TITLE$ presides over sacrificial rituals."
- councilor_death_cult_custom_modifier_desc:1 "- Sacrificial Edict Effect: §G+2%§!"
+ councilor_death_cult_custom_modifier_desc:1 "- ผลของประกาศคำสั่งบวงสรวง: §G+2%§!"
  councilor_death_cult_corporate:0 "Chief Executive Executioner"
  councilor_death_cult_corporate_female:0 "$councilor_death_cult_corporate$"
  councilor_death_cult_corporate_desc:0 "$councilor_death_cult_desc$"
@@ -953,7 +953,7 @@
  councilor_gestalt_governor:0 "โหนดการเพิ่มจำนวน"
  councilor_gestalt_governor_desc:1 "$TITLE$ คือที่ที่มีการตัดสินใจหลายๆสิ่งที่สำคัญๆ"
  councilor_gestalt_scientist:0 "โหนดความรู้ความเข้าใจ"
- councilor_gestalt_scientist_desc:0 "$TITLE$ คือที่ที่เราพัฒนาความเข้าใจเกี่ยวกับโลกรอบตัวเรา"
+ councilor_gestalt_scientist_desc:0 "$TITLE$ คือที่ที่เราพัฒนาความเข้าใจเกี่ยวกับดาวรอบตัวเรา"
  councilor_gestalt_admiral:1 "โหนดการทหาร"
  councilor_gestalt_admiral_desc:1 "$TITLE$ คือการตัดสินใจเกี่ยวกับการขยายตัวในกาแล็กซี"
  councilor_gestalt_general:2 "โหนดควบคุมบังคับ"
@@ -1223,12 +1223,12 @@
  agenda_machine_restore_general_finish_desc: "$council_agenda_agenda_machine_restore_admiral_desc$"
  agenda_machine_restore_admiral_finish: "$council_agenda_agenda_machine_restore_general_name$ $agenda_ref$"
  agenda_machine_restore_admiral_finish_desc: "$council_agenda_agenda_machine_restore_general_desc$"
- mod_restored_node_bonus_skill: "Restored Node Additional Skill"
- mod_restored_admiral_node_bonus_skill: "Restored $councilor_gestalt_admiral_with_icon$ Additional Skill"
- mod_restored_general_node_bonus_skill: "Restored $councilor_gestalt_general_with_icon$ Additional Skill"
- mod_restored_governor_node_bonus_skill: "Restored $councilor_gestalt_governor_with_icon$ Additional Skill"
- mod_restored_scientist_node_bonus_skill: "Restored $councilor_gestalt_scientist_with_icon$ Additional Skill"
- create_new_node: "\nThis will create a new §Y[GetName]§! of Skill [GetRestoredNodeSkill]."
+ mod_restored_node_bonus_skill: "โหนดฟื้นฟู เพิ่มสกิล"
+ mod_restored_admiral_node_bonus_skill: "$councilor_gestalt_admiral_with_icon$ฟื้นฟู เพิ่มสกิล"
+ mod_restored_general_node_bonus_skill: "$councilor_gestalt_general_with_icon$ฟื้นฟู เพิ่มสกิล"
+ mod_restored_governor_node_bonus_skill: "$councilor_gestalt_governor_with_icon$ฟื้นฟู เพิ่มสกิล"
+ mod_restored_scientist_node_bonus_skill: "$councilor_gestalt_scientist_with_icon$ฟื้นฟู เพิ่มสกิล"
+ create_new_node: "\nสิ่งนี้จะสร้าง §Y[GetName]§! ใหม่ สกิล [GetRestoredNodeSkill]"
  hive_restore_node_effect: "This Node will be culled.$create_new_node$"
  council_agenda_agenda_hive_restore_governor_name: "Cull $councilor_gestalt_governor$"
  council_agenda_agenda_hive_restore_governor_desc: "Our $councilor_gestalt_governor$ is no longer suited for our purpose, it shall be culled and a replacement Node shall be grown."
@@ -1248,19 +1248,19 @@
  council_agenda_agenda_machine_restore_general_name: "Reformat $councilor_gestalt_general$"
  council_agenda_agenda_machine_restore_general_desc: "Our $councilor_gestalt_general$ is no longer suited for our purpose, it shall be reformatted and restored to the last valid backup."
  restore_gestalt_councilor_effect_tooltip: "[GetRestoreNodeEffectTooltip]"
- tech_node_culling_1: "Rudimentary Node Culling"
+ tech_node_culling_1: "โหนดคัดเลือกขั้นพื้นฐาน"
  tech_node_culling_1_desc: "As the galactic stage evolves, so too should our operational instincts. Any evolutionary niche that no longer gives an advantage will be culled."
- tech_node_culling_2: "Basic Node Culling"
+ tech_node_culling_2: "โหนดคัดเลือก"
  tech_node_culling_2_desc: "Once removed, a replacement node is encouraged to grow within the proper environment. The secret is to feed it the previous node."
- tech_node_culling_3: "Advanced Node Culling"
+ tech_node_culling_3: "โหนดคัดเลือกขั้นสูง"
  tech_node_culling_3_desc: "Culling an entire node is very inefficient. Instead, just trim the divergent and unwanted lobes."
  AGENDA_UNLOCK_NODE_CULLING_TITLE: "§HUnlocks Agendas§!: Node Culling"
  AGENDA_UNLOCK_NODE_CULLING_DESC: "§YCulling Agendas§! allow us to replace Nodes that are no longer suited for our purpose. They will replace one of our current Nodes with a lower level Node."
- tech_node_reformatting_1: "Rudimentary Node Reformatting"
+ tech_node_reformatting_1: "โหนดกระบวนการรีฟอร์แมตขั้นพื้นฐาน"
  tech_node_reformatting_1_desc: "Self-determination protocols and guidance algorithms can become obsolete in a rapidly developing galactic stage. Like any junk data, they shall be overwritten."
- tech_node_reformatting_2: "Basic Node Reformatting"
+ tech_node_reformatting_2: "โหนดกระบวนการรีฟอร์แมต"
  tech_node_reformatting_2_desc: "Every self-iterating algorithm has its value. We will not allow important learning go to waste when restoring our leaders."
- tech_node_reformatting_3: "Advanced Node Reformatting"
+ tech_node_reformatting_3: "โหนดกระบวนการรีฟอร์แมตขั้นสูง"
  tech_node_reformatting_3_desc: "Using a failed piece of software to develop its successor enables quick reconstruction. Learning from faulty memory pathways generates even more advanced council directives."
  AGENDA_UNLOCK_NODE_REFORMATTING_TITLE: "§HUnlocks Agendas§!: Node Reformatting"
  AGENDA_UNLOCK_NODE_REFORMATTING_DESC: "§YReformatting Agendas§! allow us to replace Nodes that are no longer suited for our purpose. They will replace one of our current Nodes with a lower level Node."
