--- a/mod/thmod/localisation/english/plantoids_l_english.yml
+++ b/mod/thmod/localisation/english/plantoids_l_english.yml
@@ -1,10 +1,10 @@
 ﻿l_english:
- feeding_station: "Fruit Garden"
- feeding_station_plural: "Fruit Gardens"
+ feeding_station: "สวนผลไม้"
+ feeding_station_plural: "สวนผลไม้"
  origin_fruitful: "Fruitful Partnership"
  origin_fruitful_desc: "This verdant civilization has developed a unique synergy with spaceborne fauna. By offering their fruits to these creatures, they entice the seed dispersers to aid their colonization efforts."
- origin_tooltip_fruitful_effects: "- Space Fauna: Disperse ['concept_seed_pod', Seed Pods] throughout the galaxy \n- $AVAILABLE_STARBASE_BUILDINGS$ ['concept_sm_feeder', Starseed Gardens] \n- $AVAILABLE_BOMBARDMENT_STANCE$ ['concept_seed_bombing' ]\n- $HOME_SYSTEM$ ['concept_tiyanki' ] in a neighboring system"
- civic_tooltip_hive_xenophile_or_pacifist: "Is some degree of §YXenophile§!, §YPacifist§!, or a §YGestalt Consciousness§!"
+ origin_tooltip_fruitful_effects: "- สัตว์อวกาศ: กระจาย ['concept_seed_pod', Seed Pods] ไปทั่วทั้งกาแล็กซี \n- $AVAILABLE_STARBASE_BUILDINGS$ ['concept_sm_feeder', Starseed Gardens] \n- $AVAILABLE_BOMBARDMENT_STANCE$ ['concept_seed_bombing' ]\n- $HOME_SYSTEM$ ['concept_tiyanki' ] ในระบบดาวเพื่อนบ้าน"
+ civic_tooltip_hive_xenophile_or_pacifist: "มีระดับดีกรีของจริยธรรม §Yชอบต่างดาว§!, §Yรักสันติ§!, หรือ §Yเป็นหนึ่งอันเดียวกัน§!"
  START_SCREEN_FRUITFUL_PLANTOID: "If your roots run deep, yet your spirit grows restless, let others carry your aches away. Let animals sniff your flowers, nourish themselves on your fruits, and bathe in the shadow of your leaves. Let them carry pollen and seeds to distant lands, so that your offspring can bury their roots on foreign soil. And when the wind brings you the sound of rustling leaves, you'll know your children have found a new home.\n\nSince time immemorial, we have worked with local fauna to spread our species across [GetHomeWorldName]. So when the time came to uproot ourselves, branches reaching further skyward, it was only natural we would also connect with the fauna of the void. They chew our fruits. They graze our leaves. And they'll carry our children to distant worlds, where they will bloom and be nurtured by alien suns.\n\nLet our seeds spread. Let the galaxy be our garden."
  START_SCREEN_FRUITFUL_FUNGOID: "If your mycelium run deep, yet your spirit grows restless, let others carry your aches away. Let animals sniff your spores, nourish themselves on your stalks, and bathe in the shadow of your mushroom caps. Let them carry spores to distant lands, so that your offspring can bury their roots on foreign soil. And when the earths brings you the thrums of a new mycorrhizal network, you'll know your children have found a new home.\n\nSince time immemorial, we have worked with local fauna to spread our species across [GetHomeWorldName]. So when the time came to uproot ourselves, toadstools reaching further skyward, it was only natural we would also connect with the fauna of the void. They chew our fruiting bodies. They graze our gills. And they'll carry our children to distant worlds, where they will bloom and be nurtured by alien suns.\n\nLet our spores spread. Let the galaxy be our mushroom garden."
  sm_feeder: "Starseed Garden"
@@ -12,7 +12,7 @@
  sm_feeder_tt: "Effects:\n$t$Lures Space Fauna to graze at the Starbase, collecting §YSeed Pods§! for dispersal"
  sm_ring_feeder: "Orbital Garden"
  sm_ring_feeder_desc: "A vacuum garden for our Orbital Ring, blooming with genetically enhanced plantlife designed to attract spaceborne fauna."
- tech_critter_feeder: "Fruit Gardens"
+ tech_critter_feeder: "สวนผลไม้"
  tech_critter_feeder_desc: "Vacuum gardens full of bio-engineered fruits, genetically enhanced to attract spaceborne fauna."
  sseeder: "Orchard Station"
  has_origin_fruitful_special_project_key: "Empires with the §Y$origin_fruitful$§! Origin can use a §YSpecial Project§!"
@@ -163,7 +163,7 @@
  TRAIT_PLANTOID_PHOTOTROPHIC_EFFECT:0 "แทนที่ §Y50%§! ของ £food£ §Yอาหาร§! ที่ใช้บำรุงรักษา ด้วย £energy£ §Yพลังงาน§!"
  trait_plantoid_radiotrophic:0 "สังเคราะห์รังสี"
  trait_plantoid_radiotrophic_desc:0 "§LThis species is sustained by a combination of both food and low-energy radiation, and as such can thrive on the most inhospitable of worlds.§!"
- TRAIT_PLANTOID_RADIOTROPHIC_EFFECT:1 "$TRAIT_PLANTOID_PHOTOTROPHIC_EFFECT$\nการบำรุงรักษาที่เป็น £energy£ §Yพลังงาน§! ถูกลบออกสำหรับประชากรที่อาศัยอยู่บน §Yโลกแห่งความตาย§!\nการเพิ่มจำนวนของประชากรบน §Yโลกแห่งความตาย§!  §G+10%§!\nการอยู่อาศัยได้บนโลกแห่งความตาย: §G+10%§!"
+ TRAIT_PLANTOID_RADIOTROPHIC_EFFECT:1 "$TRAIT_PLANTOID_PHOTOTROPHIC_EFFECT$\nการบำรุงรักษาที่เป็น £energy£ §Yพลังงาน§! ถูกลบออกสำหรับประชากรที่อาศัยอยู่บน §Yดาวแห่งความตาย§!\nการเพิ่มจำนวนของประชากรบน §Yดาวแห่งความตาย§!  §G+10%§!\nการอยู่อาศัยได้บนดาวแห่งความตาย: §G+10%§!"
  trait_harvested_radiotrophic:0 "$trait_plantoid_radiotrophic$"
  trait_harvested_radiotrophic_desc:0 "$trait_plantoid_radiotrophic_desc$"
  trait_lithoid_radiotrophic:0 "$trait_plantoid_radiotrophic$"
