--- a/mod/thmod/localisation/english/pop_factions_l_english.yml
+++ b/mod/thmod/localisation/english/pop_factions_l_english.yml
@@ -75,9 +75,9 @@
  SUPREMACIST_FANATIC_PURIFIERS:1 "$civic_fanatic_purifiers$"
  SUPREMACIST_NOT_FANATIC_PURIFIERS:1 "$civic_fanatic_purifiers$"
  SUPREMACIST_FANATIC_PURIFIERS_DESC:1 "$civic_fanatic_purifiers_desc$"
- SUPREMACIST_DOMINATION_TRADITION:0 "รับวัฒนธรรมการปกครอง"
+ SUPREMACIST_DOMINATION_TRADITION:0 "รับวัฒนธรรมการมีอำนาจเหนือกว่า"
  SUPREMACIST_NO_DOMINATION_TRADITION:1 "$SUPREMACIST_DOMINATION_TRADITION$"
- SUPREMACIST_DOMINATION_TRADITION_DESC:0 "การยอมรับวัฒนธรรมใดๆ ที่เน้น §Yการปกครอง§! จะทำให้ [Root.GetName] พอใจ"
+ SUPREMACIST_DOMINATION_TRADITION_DESC:0 "การยอมรับวัฒนธรรมใดๆ ที่เน้น §Yการมีอำนาจเหนือกว่า§! จะทำให้ [Root.GetName] พอใจ"
  SUPREMACIST_GIANT_MASSACRE:0 "การสังหารหมู่ยักษ์"
  SUPREMACIST_NO_GIANT_MASSACRE:0 "$SUPREMACIST_GIANT_MASSACRE$"
  SUPREMACIST_GIANT_MASSACRE_DESC:0 "การทำให้พวก §Yลิไวธาน§! ให้ออกจากความทุกข์ทรมาน จะทำให้ [Root.GetName] พอใจชั่วขณะหนึ่ง"
@@ -282,7 +282,7 @@
  TRADITIONALIST_NO_TOMB_WORLDS:0 "แผ่นดินอันชั่วร้าย"
  TRADITIONALIST_NO_TOMB_WORLDS_DESC:1 "Setting foot on any §YTomb Worlds§!, even for the purposes of terraforming, will upset the [Root.GetName]."
  TRADITIONALIST_TOMB_WORLDS:0 "$TRADITIONALIST_NO_TOMB_WORLDS$"
- TRADITIONALIST_GAIA_WORLDS:1 "โลกแห่งความศักดิ์สิทธิ์"
+ TRADITIONALIST_GAIA_WORLDS:1 "ดาวแห่งความศักดิ์สิทธิ์"
  TRADITIONALIST_GAIA_WORLDS_DESC:2 "§YConsecrating§! an unspoiled §YGaia World§! within our borders will please the [Root.GetName]."
  TRADITIONALIST_NO_GAIA_WORLDS:0 "$TRADITIONALIST_GAIA_WORLDS$"
  TRADITIONALIST_UNBLISSED:0 "Blessedly Unblissed"
@@ -402,9 +402,9 @@
  TOTALITARIAN_STRONG_ARMY:0 "Military Discipline"
  TOTALITARIAN_STRONG_ARMY_DESC:0 "Maintaining at least §Y6§! Armies of any type on all [Root.Owner.GetAdj] worlds inhabited by 6 or more Pops will please the [Root.GetName]."
  TOTALITARIAN_WEAK_ARMY:0 "$TOTALITARIAN_STRONG_ARMY$"
- TOTALITARIAN_DOMINATION:0 "รับวัฒนธรรมการปกครอง"
+ TOTALITARIAN_DOMINATION:0 "รับวัฒนธรรมการมีอำนาจเหนือกว่า"
  TOTALITARIAN_NO_DOMINATION:0 "$TOTALITARIAN_DOMINATION$"
- TOTALITARIAN_DOMINATION_DESC:0 "เลือกใช้ §Yวัฒนธรรมการปกครอง§! จะทำให้ [Root.GetName] พอใจ"
+ TOTALITARIAN_DOMINATION_DESC:0 "เลือกใช้ §Yวัฒนธรรมการมีอำนาจเหนือกว่า§! จะทำให้ [Root.GetName] พอใจ"
  TOTALITARIAN_EXTRANATIONAL_AUTHORITY:0 "มีอำนาจในโลกอื่น"
  TOTALITARIAN_NO_EXTRANATIONAL_AUTHORITY:0 "$TOTALITARIAN_EXTRANATIONAL_AUTHORITY$"
  TOTALITARIAN_EXTRANATIONAL_AUTHORITY_DESC:0 "ขยายอิทธิพลของเราเพื่อครอบงำ §Yรัฐบริวารอื่น§! จะทำให้ [Root.GetName] ชอบ"
