--- a/mod/thmod/localisation/english/technology_l_english.yml
+++ b/mod/thmod/localisation/english/technology_l_english.yml
@@ -565,8 +565,8 @@
  tech_colonization_4:0 "การเพิ่มคุณค่าของดินในโลกใบอื่น"
  tech_colonization_4_desc:1 "Extensive study into different soil types and their ability to support crops will help improve the living conditions of our settlers on foreign worlds."
  tech_colonization_5:1 "การศึกษาบูรณาการเชิงนิเวศ"
- tech_colonization_5_desc:2 "การศึกษาเพิ่มเติมเกี่ยวกับสภาพภูมิอากาศของดาวเคราะห์ที่แตกต่างกันจะช่วยให้เราสามารถตั้งถิ่นฐานประชากรของเราบนโลกที่เคยคิดว่าไม่เป็นมิตรเกินกว่าที่จะรองรับพวกเขาได้"
- tech_tomb_world_adaption:0 "การปรับตัวในโลกแห่งความตาย"
+ tech_colonization_5_desc:2 "การศึกษาเพิ่มเติมเกี่ยวกับสภาพภูมิอากาศของดาวเคราะห์ที่แตกต่างกันจะช่วยให้เราสามารถตั้งถิ่นฐานประชากรของเราบนดาวที่เคยคิดว่าไม่เป็นมิตรเกินกว่าที่จะรองรับพวกเขาได้"
+ tech_tomb_world_adaption:0 "การปรับตัวในดาวแห่งความตาย"
  tech_tomb_world_adaption_desc:0 "Through comprehensive study of irradiated environments we will allow our settlers to colonize worlds that have been devastated by nuclear warfare."
  tech_free_enterprises:0 "Free Enterprises"
  tech_frontier_initiatives:0 "Frontier Initiatives"
