--- a/mod/thmod/localisation/english/toxoids_l_english.yml
+++ b/mod/thmod/localisation/english/toxoids_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  origin_toxic_knights:0 "Knights of the Toxic God"
  origin_toxic_knights_desc:2 "Centuries ago, this species' homeworld was visited by a Toxic Entity. The ecological catastrophe that followed ruined half the world, but allowed an early unification of the survivors in their reverence for the Toxic God. An Order of Knights has been created to search for the Toxic God, and although many things have changed, the quest continues."
- origin_toxic_knights_effects:3 "- Homeworld: $TABBED_NEW_LINE$- ['concept_toxic_features'] $TABBED_NEW_LINE$- Unique ['concept_pc_habitat', Orbital Habitat]: $TABBED_NEW_LINE$$t$- ['concept_order_keep', £building£ $building_order_keep$] $TABBED_NEW_LINE$$t$- ['concept_orders_demesne', £district£ $district_orders_demesne$] $TABBED_NEW_LINE$$t$- ['concept_politician', £job_politician£ $job_politician$] Jobs replaced by ['concept_order_jobs'] $NEW_LINE$- Situation: ['concept_knights_quest'] $NEW_LINE$- Policies: §IKnightly Duties§! $NEW_LINE$- $AVAILABLE_HOLDINGS$ ['concept_knight_commandery', £building£ Order's Commanderies] on Subject colonies"
+ origin_toxic_knights_effects:3 "- Homeworld: $TABBED_NEW_LINE$- ['concept_toxic_features'] $TABBED_NEW_LINE$- ['concept_pc_habitat', ที่อยู่อาศัยวงโคจรดาว] ที่มีลักษณะเฉพาะ: $TABBED_NEW_LINE$$t$- ['concept_order_keep', £building£ $building_order_keep$] $TABBED_NEW_LINE$$t$- ['concept_orders_demesne', £district£ $district_orders_demesne$] $TABBED_NEW_LINE$$t$- งาน ['concept_politician', £job_politician£ $job_politician$] ถูกแทนที่ด้วย ['concept_order_jobs'] $NEW_LINE$- สถานการณ์: ['concept_knights_quest'] $NEW_LINE$- นโยบาย: §IKnightly Duties§! $NEW_LINE$- $AVAILABLE_HOLDINGS$ ['concept_knight_commandery', £building£ Order's Commanderies] ในอาณานิคมของเมืองขึ้น"
  origin_toxic_knights_negative_effects: "- $INITIAL_POPS$ §R-3§!"
  START_SCREEN_TOXIC_KNIGHTS:1 "Long ago, our planet was divided. Petty kings squabbled constantly, and our population bled for their vain ambitions. But with the coming of the first High King, all of this changed. Their inspired leadership forged a kingdom without equal.\n\nAbove all else, the High King was pious. War was waged against any who denied their God, but still the heretics persisted. The King's prayers were answered when the Toxic God visited our world. Though its time among us was brief, its baneful influence poisoned the lands of the unbelievers. Any who survived pledged fealty to the High King. For the first time, our world was unified.\n\nThe Toxic God soon left us, but the King, determined to find it, founded an order of knights. For centuries, these valiant souls searched tirelessly, but to no avail. The Toxic God had long since departed from our world. The next chapter of the Quest would be written in the stars. With the use of powerful relics, it was the Order that built our Empire's first orbital station. A mighty Keep, it would become the springboard from which they plunged ever deeper into the cosmos."
  START_SCREEN_TOXIC_KNIGHTS_CORPORATE:0 "Long ago, our planet was divided. Petty kings squabbled constantly, and our population bled for their vain ambitions. But with the coming of the first High King, all of this changed. Their inspired leadership forged a kingdom without equal.\n\nAbove all else, the High King was pious. War was waged against any who denied their God, but still the heretics persisted. The King's prayers were answered when the Toxic God visited our world. Though its time among us was brief, its baneful influence poisoned the lands of the unbelievers. Any who survived pledged fealty to the High King. For the first time, our world was unified.\n\nThe Toxic God soon left us, but the King, determined to find it, founded an order of knights. For centuries, these valiant souls searched tirelessly, but to no avail. The Quest is a very expensive prospect. Over time, the kingdom became more and more interested in the pursuit of profit to better support the knights. By living and consuming, every citizen supports the Quest, and our champions are heavily mediatized.\n\nThe Toxic God has long since departed from our world and the next chapter of the Quest would be written in the stars. With the use of powerful relics, it was the Order that built our Empire's first orbital station. A mighty Keep, it would become the springboard from which they plunged ever deeper into the cosmos."
@@ -100,7 +100,7 @@
  syamelles_blessing_synth_desc:0 "$syamelles_blessing_desc$"
  r_toxic_god:0 "Maw of the Toxic Entity"
  r_toxic_god_desc:0 "Some believed the entity this great maw was salvaged from held divine power. A God no more, the creature lies slain, this trophy the only monument to mark its passing."
- r_toxic_god_knights_passive_effect: "§YUnlocks Orbital:§! $major_orbital_knights$"
+ r_toxic_god_knights_passive_effect: "§Yปลดล็อกที่อยู่อาศัยโคจรดาว:§! $major_orbital_knights$"
  r_toxic_god_knights_effect:0 "Unlocks a §YDecision§! to §YConsecrate a Habitat§! and establish an §Y$building_order_castle$§! there."
  building_order_castle:0 "Order's Castle"
  building_order_castle_desc:0 "The Order of the Toxic God has established a castle on this habitat. A contingent of knights and squires have set up base here."
@@ -435,10 +435,10 @@
  demotivated_knights_desc:0 "The quest is long and the goal is far. Sometimes, it all seems a little... Pointless. Morale amongst the knights has slightly dipped."
  despair_of_the_knightly_order:0 "Despair of the Knightly Order"
  despair_of_the_knightly_order_desc:0 "The long search for the Toxic God has ended in failure. With no further leads to explore, many question the point of continuing the quest."
- origin_overtuned:0 "Overtuned"
+ origin_overtuned:0 "การปรับแต่งที่มากเกินไป"
  origin_overtuned_desc:1 "This civilization uses any and all means of organic enhancement, no matter the risk, no matter the cost. After all, it is better to burn out brightly than fade away into obscurity."
  origin_overtuned_effects:1 "Starts with advanced biological traits available, which are stronger and cheaper than normal traits but carry extraordinary risks."
- origin_tooltip_overtuned_effects:4 "- $SPECIES_TRAITS$ Access to ['concept_overtuned_traits'] Traits$NEW_LINE$- Overtuned Traits:$TABBED_NEW_LINE$- Can be boosted by the ['concept_damn_the_consequences'] Edict$TABBED_NEW_LINE$- Can be added and removed through §IGenetic Modification§!\n- $ADDITONAL_TECHNOLOGIES_STRING$ ['concept_gene_tailoring', £society£ $tech_gene_tailoring$]"
+ origin_tooltip_overtuned_effects:4 "- $SPECIES_TRAITS$ คุณลักษณะ ['concept_overtuned_traits'] $NEW_LINE$- คุณลักษณะการปรับแต่งมากเกินไป:$TABBED_NEW_LINE$- สามารถเพิ่มประสิทธิภาพได้ด้วย ประกาศคำสั่ง ['concept_damn_the_consequences'] $TABBED_NEW_LINE$- สามารถเพิ่มและลบได้ด้วย §Iการดัดแปลงพันธุกรรม§!\n- $ADDITONAL_TECHNOLOGIES_STRING$ ['concept_gene_tailoring', £society£ $tech_gene_tailoring$]"
  START_SCREEN_OVERTUNED:1 "Nature is a tepid inventor. Evolution is a glacial process. To prosper we require strength, speed and brain power - now, not in a million years. Natural selection is miserly with its gifts and so we must improve ourselves.\n\nThus our civilization is built on the principle of unrestrained enhancement of our physical bodies. These enhancements have allowed us to unite our world under one banner, and now they will lead us even further.\n\nWith genetically crafted brains, brawn, and bravery, we shall prosper among the stars... As only a perfectly designed species can."
  disables_overtuned_features:0 "§RChoosing this Ascension Perk will disable Overtuned Origin mechanics.§!"
  civic_toxic_baths:0 "Mutagenic Spas"
@@ -615,16 +615,16 @@
  spliced_adaptability_tooltip:0 "Habitability: §G+20%§!"
  trait_juiced_power:0 "Juiced Power"
  trait_juiced_power_desc:1 "§LAdrenaline released on demand and hyper-potent growth hormones have led to a massive increase in strength. Just ignore the occasional internal tearing.§!"
- juiced_power_tooltip:1 "Worker Pop Resource Output: §G+5%§!."
+ juiced_power_tooltip:1 "ผลผลิตที่เป็นทรัพยากรจากประชากรคนงาน: §G+5%§!."
  trait_crack_miner:1 "Dedicated Miner"
  trait_crack_miner_desc:0 "§LSupreme hand-eye coordination, near endless endurance and self-purifying lungs have created entire crack teams of miners. Sadly they get brittle without sunlight.§!"
- crack_miner_tooltip:0 "£minerals£ Minerals from £pops£ Jobs: §G+15%§!"
+ crack_miner_tooltip:0 "£minerals£ แร่จาก £pops£ งาน: §G+15%§!"
  trait_farm_hands:0 "Farm Appendages"
  trait_farm_hands_desc:1 "§LThe more appendages, the higher the farming output. Some appendages can even operate while their host is asleep. Rumors of hosts strangled by their new limbs have been deemed unfounded in our latest investigation.§!"
- farm_hands_tooltip:0 "£food£ Food from £pops£ Jobs: §G+15%§!"
+ farm_hands_tooltip:0 "£food£ อาหารจาก £pops£ งาน: §G+15%§!"
  trait_technical_skill:0 "Technical Talent"
  trait_technical_skill_desc:0 "§LExtra internal organs grant a vastly increased innate sensitivity to electricity and magnetic fields. Reports of recipients hearing screams and voices from the reactors should be ignored.§!"
- technical_skill_tooltip:0 "£energy£ Energy from £pops£ Jobs: §G+15%§!"
+ technical_skill_tooltip:0 "£energy£ พลังงานจาก £pops£ งาน: §G+15%§!"
  trait_crafted_smiles:0 "Crafted Smiles"
  trait_crafted_smiles_desc:0 "§LSlightly shifted facial features, a mix of enhanced and slackened muscular development - and of course outside chemicals - have created the perfect smile. Forever.§!"
  crafted_smiles_tooltip:0 "£amenities£ ความอยู่ดีกินดีจาก £pops£ งาน: §G+15%§!"
@@ -639,7 +639,7 @@
  gene_mentorship_tooltip:0 "ได้รับค่าประสบการณ์ผู้นำ: §G+25%§!"
  trait_expressed_tradition:0 "Expressed Tradition"
  trait_expressed_tradition_desc:0 "§LFanaticism on demand: faith is merely a cocktail of hormones, one we have perfected. Where that faith eventually leads is a matter of subsequent guidance.§!"
- expressed_tradition_tooltip:0 "£unity£ Unity from £pops£ Jobs: §G+10%§!"
+ expressed_tradition_tooltip:0 "£unity£ เอกภาพจาก £pops£ งาน: §G+10%§!"
  trait_elevated_synapses:0 "Elevated Synapses"
  trait_elevated_synapses_desc:0 "§LAs a computational device, a brain does not run at 100% capacity. However, we have gone beyond the standard usage. If issues are encountered, try turning it off and on again.§!"
  elevated_synapses_tooltip:1 "£physics£ Physics Research: §G+20%§!\n£society£ Society Research: §G+20%§!\n£engineering£ Engineering Research: §G+20%§!"
@@ -648,8 +648,8 @@
  preplanned_growth_tooltip:0 "Pop Growth Speed: §G+30%§!\nPop Housing Usage: §G-10%§!"
  trait_excessive_endurance:0 "Excessive Endurance"
  trait_excessive_endurance_desc:0 "§LThe greatest in adaptability genes have been hyper-expressed in these specimens. Mutation rates around 30% indicate a somewhat stable and successful experiment.§!"
- excessive_endurance_tooltip:0 "Habitability: §G+30%§!\nResources from Jobs: §G+5%§!"
- edict_damn_the_consequences:0 "Damn the Consequences"
+ excessive_endurance_tooltip:0 "การอยู่อาศัยได้: §G+30%§!\nทรัพยากรจากงาน: §G+5%§!"
+ edict_damn_the_consequences:0 "อะไรจะเกิดขึ้นก็ช่างมัน"
  edict_damn_the_consequences_desc:1 "This Edict pushes our genetic modifications to the very limit, doubling their effect but also causing an increased amount of terrible side-effects, including sudden catastrophic combustion.\n\n§RWhat could possibly go wrong?§!"
  edict_damn_the_consequences_effects:0 "All positive effects from §HOvertuned§! Traits are doubled."
  d_exotic_mountain:0 "Exotic Mountains"
