--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -81,12 +81,12 @@
  tr_expansion_galactic_ambition_hive_delayed:0 "Primal terror accompanied the first tentative steps in to the dark, away from our home nest and the mother hive that nurtured us. Only by conquering and breeding out this fear can we continue to grow. Millions of drones will die so that the hive may live."
  tr_expansion_finish:0 "วัฒนธรรมการขยายอาณาเขตเสร็จแล้ว"
  tr_expansion_finish_machine:0 "วัฒนธรรมการขยายอาณาเขตเสร็จแล้ว"
- tr_expansion_finish_void_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$ on Habitats: §G+1§!\nAscension Perks Unlocked: §G+1§!"
- tradition_domination:0 "การปกครอง"
+ tr_expansion_finish_void_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$ บนที่อยู่อาศัยในอวกาศ: §G+1§!\nปลดล็อกการยกระดับ: §G+1§!"
+ tradition_domination:0 "การมีอำนาจเหนือกว่า"
  tradition_domination_desc:0 "หากเราไม่บังคับคนอื่น พวกเขาก็จะบังคับเราอย่างหลีกเลี่ยงไม่ได้"
  tradition_domination_machine_desc:0 "เราแสวงหาการทำงานที่มีความสามัคคีปรองดองกันทั่วทั้งกาแล็กซี่ สิ่งมีชีวิตที่อื่นๆต่อต้านสิ่งนี้เนื่องจากความต้องการส่วนตัวตามอำเภอใจที่ไร้ประสิทธิภาพ เราจะลบความผิดปกติของพวกเขาออกไปเช่นส่วนที่ทำงานผิดปกติ"
  tradition_domination_hive_desc:0 "ทุกสิ่งที่ไม่ใช่เราจะต้องรับใช้เรา หรือไม่ก็เป็นอาหารของเรา"
- tr_domination_adopt:0 "วัฒนธรรมการปกครอง"
+ tr_domination_adopt:0 "วัฒนธรรมการมีอำนาจเหนือกว่า"
  tr_domination_adopt_void_desc:1 "การบำรุงรักษา §Yที่อยู่อาศัยในอวกาศ§! ที่เป็น £alloys£ โลหะผสม : §G-20%§!"
  tr_domination_colonial_viceroys:0 "อุปราชอาณานิคม"
  tr_domination_colonial_viceroys_delayed:0 "Our control over the colonies is dependent upon us finding capable and loyal individuals that can be trusted to enforce the will of the government."
@@ -127,7 +127,7 @@
  tr_domination_divergence_supression:0 "การปราบปรามความแตกต่าง"
  tr_domination_divergence_supression_desc:1 "$tr_domination_deviancy_protocols_desc$"
  tr_domination_divergence_supression_delayed:0 "Occasionally our unity is disrupted by a rogue drone. This threat has increased as we spread out across the stars. Purging and recycling these units gives them a chance to contribute to the hive with their deaths, in a way they could not with their lives."
- tr_domination_finish:0 "วัฒนธรรมการปกครองสำเร็จ"
+ tr_domination_finish:0 "วัฒนธรรมการมีอำนาจเหนือกว่าสำเร็จ"
  tr_domination_federations_finish:0 "$tr_domination_finish$"
  tr_domination_federations_finish_desc:0 "$MOD_EMPIRE_SIZE_POPS_MULT$ §G-10%§!\nสามารถเข้าถึงสหพันธ์ประเภท §Y$hegemony_federation$§!ได้\nปลดล็อกการยกระดับ: §G+1§!"
  tradition_harmony:0 "ความปรองดอง"
@@ -602,7 +602,7 @@
  tr_cybernetics_assimilator_integrated_anatomy:0 "รวมเข้ากับร่างกาย"
  tr_cybernetics_assimilator_integrated_anatomy_delayed:0 "Only through the amalgamation of flesh, steel, and nano-carbon composite can we truly reach perfection."
  tr_cybernetics_assimilator_integrated_anatomy_desc:0 "ปลดล็อกคุณลักษณะ §Yไซเบอร์เนติก§!  สำหรับการปรับเปลี่ยนเผ่าพันธุ์"
- tr_cybernetics_assimilator_crucible:0 "โลกแห่งเบ้าหลอม"
+ tr_cybernetics_assimilator_crucible:0 "ดาวแห่งเบ้าหลอม"
  tr_cybernetics_assimilator_crucible_delayed:0 "We shall have worlds dedicated to our cyborg progeny, ensuring the swift growth of productive components for the collective."
  tr_cybernetics_assimilator_crucible_desc:0 "สามารถกำหนดประเภทของดาวอาณานิคมแบบ §Y$col_crucible$§! ได้\n§Yโลกแห่งเบ้าหลอม§! จะมีงาน §Y£job_crucible_drone£ $job_crucible_drone$§! และเพิ่ม £mod_pop_growth_speed£ §Y$MOD_POP_GROWTH_SPEED$§! เพื่อแลกกับ §Y$mod_planet_pops_upkeep_mult$§! ที่เพิ่มขึ้นและ §Yทรัพยากรที่ลดลงจากงาน§!"
  tr_cybernetics_assimilator_modular_cybernetics:0 "ชิ้นส่วนไซเบอร์เนติกส์"
@@ -731,25 +731,25 @@
  tr_politics_persistent_petitioners_delayed:0 "Our delegations in the Galactic Community are extremely persistent, and will not take "No" for an answer. It might take time, but we will obtain what we deserve."
  persistent_petitioners:0 "$tr_politics_persistent_petitioners$"
  tradition_enmity: "ความเป็นปฏิปักษ์"
- tradition_enmity_desc: "[Root.GetSpeciesNamePlural] never move so fast as when other [Root.GetSpeciesNamePlural] are setting the pace."
+ tradition_enmity_desc: "[Root.GetSpeciesNamePlural] มักจะทำงานหนักขึ้น เมื่ออยู่ในสภาพแวดล้อมที่มีการแข่งขัน และพยายามตาม [Root.GetSpeciesNamePlural] คนอื่นให้ทัน การแข่งขันเป็นแรงจูงใจอันทรงพลังทำให้ผู้คนทำงานหนักขึ้นและบรรลุเป้าหมายได้"
  tradition_enmity_desc_machine: "The [Root.GetName] develops faster when tested by competent competition."
- tr_enmity_adopt: "$tradition_enmity$ Traditions"
- tr_enmity_adopt_desc: "£mod_pop_growth_speed£ §YPop Growth§! per neighboring Rival: §G+3%§!\n£mod_planet_pop_assembly_mult£ §YPop Assembly§! per neighboring Rival: §G+3%§!"
+ tr_enmity_adopt: "วัฒนธรรม $tradition_enmity$"
+ tr_enmity_adopt_desc: "£mod_pop_growth_speed£ §Yประชากรเพิ่ม§! ต่อจำนวนคู่แข่งที่เป็นเพื่อนบ้าน: §G+3%§!\n£mod_planet_pop_assembly_mult£ §Yการประกอบประชากรเครื่องจักร§! ต่อจำนวนคู่แข่งที่เป็นเพื่อนบ้าน: §G+3%§!"
  tr_enmity_finish: "$tradition_enmity$ Finished"
- tr_enmity_finish_desc: "Available Envoys: §G+1§!\nUnlocks the §YAntagonistic§! Diplomatic Stance.\n$TRADITIONS_FINISH_AP$"
- tr_enmity_rise_to_the_occasion: "Rise to the Occasion"
+ tr_enmity_finish_desc: "ทูตที่มี: §G+1§!\nปลดล็อกท่าทีทางการทูต §Yเป็นปฏิปักษ์§!\n$TRADITIONS_FINISH_AP$"
+ tr_enmity_rise_to_the_occasion: "ทำให้ดีขึ้นเพื่อตอบสนองต่อสถานการณ์"
  tr_enmity_rise_to_the_occasion_delayed: "In the face of an ever-increasing number of adversaries, we stand united."
- tr_enmity_rise_to_the_occasion_effect: "Leader Capacity per Rival: §G+0.5§!"
- tr_enmity_consumate_contrarian: "Consummate Contrarian"
+ tr_enmity_rise_to_the_occasion_effect: "ความจุของผู้นำต่อจำนวนคู่แข่ง: §G+0.5§!"
+ tr_enmity_consumate_contrarian: "อยู่ตรงกันข้ามโดยสิ้นเชิง"
  tr_enmity_consumate_contrarian_delayed: "Blocking the plans of the opposition can be just as satisfying as enacting one's own."
- tr_enmity_match: "Match"
+ tr_enmity_match: "การแข่งขัน"
  tr_enmity_match_delayed: "First, establish an equal playing field."
- tr_enmity_match_effect: "While Militarily weaker than a Rival:\n$t$Ship Build Cost: §G-10%§!\n$t$Ship Build Speed: §G+10%§!\nWhile Technologically weaker than a Rival:\n$t$Researcher Upkeep: §G-15%§!\n$t$Research Labs Build Speed: §G+100%§!\nWhile Economically weaker than a Rival:\n$t$[GetWorker] Output: §G+10%§!"
- tr_enmity_outpace: "Outpace"
+ tr_enmity_match_effect: "ในขณะที่กำลังทางทหารอ่อนแอกว่าคู่แข่ง:\n$t$ค่าใช้จ่ายในการสร้างยาน: §G-10%§!\n$t$ความเร็วในการสร้างยาน: §G+10%§!\nในขณะที่เทคโนโลยีอ่อนแอกว่าคู่แข่ง:\n$t$ค่าบำรุงรักษานักวิจัย: §G-15%§!\n$t$ความเร็วในการสร้างห้องวิจัย: §G+100%§!\nในขณะที่เศรษฐกิจอ่อนแอกว่าคู่แข่ง:\n$t$[GetWorker] ผลผลิต: §G+10%§!"
+ tr_enmity_outpace: "แซงหน้า"
  tr_enmity_outpace_delayed: "Second, make the move your foe is unwilling to."
- tr_enmity_eclipse: "Eclipse"
+ tr_enmity_eclipse: "การบดบังรัศมี"
  tr_enmity_eclipse_delayed: "Third, cast a shadow over your adversary once and for all."
- tr_enmity_eclipse_effect: "Grants §G2%§! increased £physics£ £society£ £engineering£ §YScience§! and £unity£ §YUnity§! output per §YRival§! after winning a §YHumiliation War§!."
+ tr_enmity_eclipse_effect: "ได้รับ §Yวิทยาศาสตร์§! £physics£ £society£ £engineering£ เพิ่มขึ้น §G2%§! และผลผลิต £unity£ §Yเอกภาพ§! เพิ่มขึ้น §G2%§! ต่อจำนวน §Yคู่แข่ง§! หลังจากชนะ §Yสงครามดูถูกเหยียดหยาม§!"
  enmity_humiliate: "[GetName] gets the §YReaffirmed Superiority§! modifier for §Y10§! years granting them §G2%§! increased $r_research$ and $r_unity$ output per §YRival§!."
  reaffirmed_superiority: "Reaffirmed Superiority"
  reaffirmed_superiority_desc: "Our superiority is unassailable. No one is greater than the [GetName]."
@@ -807,7 +807,7 @@
  synthetic_empire_psionic_ascension:0 "$TRIGGER_FAIL$Synthetic empires are incapable of starting down the path to Psionic Ascension."
  allow_gaia:0 "ทำให้เราสามารถปรับสภาพดาวให้เป็น §Yดาวเคราะห์ไกอา§! ได้"
  no_rev_engineering:1 "ปฏิบัติการ §Y$operation_steal_technology$§! จะล้มเหลวโดยอัตโนมัติเมื่อใช้กับพวกเราและจักรวรรดิอื่นจะไม่สามารถนำ §Yเศษซากยานรบของเรา§! ที่ถูกทำลาย ไปศึกษาวิจัยได้"
- allow_raiding:0 "ปลดล็อกการทิ้งระเบิดแบบ §Y$bombardment_raiding$§! ซึ่งจะช่วยให้เราสามารถลักพาตัวประชากรจากดาวเคราะห์ที่ถูกปิดล้อมและย้ายประชากรมาที่โลกของเรา"
+ allow_raiding:0 "ปลดล็อกการทิ้งระเบิดแบบ §Y$bombardment_raiding$§! ซึ่งจะช่วยให้เราสามารถลักพาตัวประชากรจากดาวเคราะห์ที่ถูกปิดล้อมและย้ายประชากรมาที่ดาวของเรา"
  ap_defender_of_the_galaxy_effect_opinion:2 "เพิ่ม £opinion£ §Yทัศนคติ§! ของจักรวรรดิที่สามารถทำกิจกรรมการฑูตแบบปกติได้ §G+200§!"
  ap_defender_of_the_galaxy_modifier_desc:0 "สร้างความเสียหายให้กับฝ่ายไครซิสตอนจบเกม : §G+50%§!"
  ap_engineered_evolution:0 "วิวัฒนาการทางพันธุวิศวกรรม"
@@ -841,10 +841,10 @@
  ap_synthetic_age:0 "ยุคจักรกลสังเคราะห์"
  ap_synthetic_age_desc:0 "ยุคของสิ่งมีชีวิตได้มาและผ่านไป อนาคตของกาแลคซีเป็นของเครื่องจักร นี่คือรุ่งอรุณแห่งยุคสังเคราะห์"
  synthetic_age_tooltip:1 "สามารถเข้าถึงวัฒนธรรม §Y$tradition_synthetics$§! ได้\n$UNLOCKS_AGENDA$ $council_agenda_agenda_synthetic_age_name$, ซึ่งให้เทคโนโลยีการดัดแปลงเครื่องจักรให้เป็นทางเลือกในการวิจัยได้"
- ap_machine_worlds:0 "โลกเครื่องจักร"
- ap_machine_worlds_desc:0 "เราจะสร้างโลกของเราให้เป็นภาพสะท้อนของตัวเราเองโดยแทนที่ความอ่อนแอของสิ่งมีชีวิตด้วยความสมบูรณ์แบบของโลหะที่ไม่เปลี่ยนรูป"
- ap_hive_worlds:0 "โลกที่เป็นรัง"
- ap_hive_worlds_desc:0 "เราจะสร้างโลกที่มีชีวิตซึ่งเป็นส่วนหนึ่งของรังเหมือนกับโดรนที่อาศัยอยู่ด้วยกัน"
+ ap_machine_worlds:0 "ดาวเครื่องจักร"
+ ap_machine_worlds_desc:0 "เราจะสร้างดาวของเราให้เป็นภาพสะท้อนของตัวเราเองโดยแทนที่ความอ่อนแอของสิ่งมีชีวิตด้วยความสมบูรณ์แบบของโลหะที่ไม่เปลี่ยนรูป"
+ ap_hive_worlds:0 "ดาวที่เป็นรัง"
+ ap_hive_worlds_desc:0 "เราจะสร้างดาวที่มีชีวิตซึ่งเป็นส่วนหนึ่งของรังเหมือนกับโดรนที่อาศัยอยู่ด้วยกัน"
  ap_shared_destiny:0 "โชคชะตาร่วมกัน"
  ap_shared_destiny_desc:0 "เมื่อเราขึ้นไปจุดที่สูงขึ้นเรื่อยๆเราต้องไม่ทิ้งคนที่รับใช้เราด้วยความภักดี อนาคตอันรุ่งโรจน์ของจักรวรรดิเราหมายถึงการมีโชคชะตาร่วมกันเสมอ"
  ap_shared_destiny_effect:0 "คุณไม่ได้รับโทษ $r_loyalty$ ของ §Yจักรวรรดิที่เป็นบริวาร§! ลดลง จากการที่คุณมีหลายจักรวรรดิบริวาร(เมืองขึ้น)"
@@ -857,14 +857,14 @@
  ap_defender_of_the_galaxy_desc:0 "ในขณะที่ชาติดวงดาวต่างต่อสู้กันในข้อพิพาทเล็กๆน้อยๆ กองกำลังที่น่ากลัวและพลังที่ไม่อาจจินตนาการได้กำลังรวมตัวกันเพื่อต่อสู้กับสิ่งชีวิตทั้งหมด ใครจะปกป้องเรา?"
  ap_galactic_contender_desc:0 "จักรวรรดิเก่าแก่ทรงพลังยึดติดอยู่กับซากปรักหักพังของอารยธรรมที่เสื่อมโทรมของพวกเขาและไม่เคยกลัวเผ่าพันธุ์ที่อายุน้อยกว่าและมีพลวัตมากขึ้นที่ล้อมรอบพวกเขา ช่วงเวลาของพวกเขาได้ผ่านไปนานแล้ว"
  ap_technological_ascendancy_desc:0 "เทคโนโลยีที่จะแยกไม่ออกจากเวทมนตร์ที่คนรุ่นก่อนอยู่ใกล้แค่เอื้อม ยุคแห่งเทคโนโลยีใหม่ได้เริ่มขึ้นแล้ว"
- ap_mastery_of_nature_desc:0 "แม้ว่าเราจะเข้าใจธรรมชาติของโลกของเรามานานแล้ว แต่สิ่งมีชีวิตต่างดาวที่เราได้พบกับความท้าทายใหม่ๆ พวกเขาก็จะเอาชนะได้เช่นกัน"
+ ap_mastery_of_nature_desc:0 "แม้ว่าเราจะเข้าใจธรรมชาติของดาวของเรามานานแล้ว แต่สิ่งมีชีวิตต่างดาวที่เราได้พบกับความท้าทายใหม่ๆ พวกเขาก็จะเอาชนะได้เช่นกัน"
  ap_voidborn_desc:2 "เราได้ปรับเปลี่ยนให้เข้ากับที่อยู่อาศัยถาวรในอวกาศ ลดความต้องการโครงสร้างพื้นฐานและเพิ่มพื้นที่ที่อยู่อาศัยสำหรับการทำงานอื่นๆ"
- ap_voidborn_habitat_effect:1 "Can construct advanced housing buildings on §YHabitats§!."
+ ap_voidborn_habitat_effect:1 "สามารถสร้างที่อยู่อาศัยขั้นสูงบน §Yที่อยู่อาศัยในอวกาศ§! ได้"
  ap_the_circle_of_life_desc:0 "โครงสร้างขนาดใหญ่รูปวงแหวนพร้อมที่อยู่อาศัยเทียมที่สร้างขึ้นรอบๆวงโคจรของดาวฤกษ์ ในทางทฤษฎีก็สามารถทำได้..."
  ap_galactic_wonders_desc:0 "โครงสร้างขนาดใหญ่ถือได้ว่าเป็นสิ่งมหัศจรรย์ในยุคของเรา ขอบเขตของโครงการดังกล่าวน่าจะเป็นไปไม่ได้เลยสำหรับคนรุ่นก่อนๆ"
  ap_interstellar_dominion_desc:2 "ดวงดาวกวักมือเรียกและเราก็ตามไป ขอให้ไม่มีอะไรขวางกั้นระหว่างเรากับพวกเขา"
  ap_colossus:0 "โครงการโคลอสซัส"
- ap_colossus_desc:0 "โครงการ 'โคลอสซัส' เป็นสถานที่ในฝันของความน่ากลัวและการป้องกันยับยั้ง ลองจินตนาการถึงยานที่ใหญ่ที่สุดซึ่งมีอาวุธที่สามารถทำลายล้างทั้งโลกได้"
+ ap_colossus_desc:0 "โครงการ 'โคลอสซัส' เป็นสถานที่ในฝันของความน่ากลัวและการป้องกันยับยั้ง ลองจินตนาการถึงยานที่ใหญ่ที่สุดซึ่งมีอาวุธที่สามารถทำลายล้างทั้งดาวได้"
  ap_enigmatic_engineering:0 "วิศวกรรมพิศวง"
  ap_enigmatic_engineering_desc:0 "เทคโนโลยีไม่ได้เป็นเพียงวิธีการแก้ปัญหา แต่เป็นภาษาที่เราก้าวไปไกลกว่าในทางโลก จิตใจที่ด้อยกว่าก็ไม่เข้าใจความก้าวหน้าของเรา"
  ap_enigmatic_engineering_cloaking:0 "$ap_enigmatic_engineering$"
