--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -412,8 +412,8 @@
  HAS_NO_DEPOSIT_TYPE:0 "ไม่มีแหล่งทรัพยากร $TYPE|H$"
  HAS_DEPOSIT_CATEGORY:0 "Has deposit category $CAT|H$"
  HAS_NOT_DEPOSIT_CATEGORY:0 "Has NOT deposit category $CAT|H$"
- IS_STARTING_SYSTEM:0 "Is Starting System"
- IS_NOT_STARTING_SYSTEM:0 "Is not starting System"
+ IS_STARTING_SYSTEM:0 "เป็นระบบดาวเริ่มต้น"
+ IS_NOT_STARTING_SYSTEM:0 "ไม่เป็นระบบดาวเริ่มต้น"
  HAS_ADVISOR:0 "$COUNTRY|Y$ Has an Advisor."
  HAS_NOT_ADVISOR:0 "$COUNTRY|Y$ ไม่มีที่ปรึกษา"
  HAS_GLOBAL_FLAG:0 "Global Flag: $FLAG|Y$ Is Set"
@@ -569,8 +569,8 @@
  IS_BOTTLENECK_SYSTEM_TRIGGER:0 "Is bottleneck"
  DOES_NOT_HAVE_MISSION:0 "ไม่มีภารกิจ $MISSION$"
  HAS_MISSION:0 "Has mission $MISSION$"
- IS_COUNTRY_TYPE:0 "Is of country type: $TYPE$"
- IS_NOT_COUNTRY_TYPE:0 "Is NOT of country type: $TYPE$"
+ IS_COUNTRY_TYPE:0 "เป็นจักรวรรดิประเภท: $TYPE$"
+ IS_NOT_COUNTRY_TYPE:0 "ไม่เป็นจักรวรรดิประเภท: $TYPE$"
  HAS_NOT_PLANET_MODIFIER_TRIGGER:0 "Has NOT planet modifier: $MODNAME$"
  HAS_PLANET_MODIFIER_TRIGGER:0 "Has planet modifier: $MODNAME$"
  SET_RIGHTS_EFFECT:0 "Change $TYPE$ for $SPECIES|Y$ in $COUNTRY$ to $SETTING|Y$."
@@ -788,7 +788,7 @@
  HAS_NOT_POP_PERCENTAGE:0 "Number of Pops is NOT $COMPARATOR$ $NUM|Y%$"
  HAS_POP_PERCENTAGE:0 "Number of Pops is $COMPARATOR$ $NUM|Y%$"
  HAS_NOT_MIGRATION_TREATY:0 "ไม่มีสนธิสัญญาอพยพย้ายถิ่นกับ $COUNTRY|Y$"
- HAS_MIGRATION_TREATY:0 "Has a migration treaty with $COUNTRY|Y$"
+ HAS_MIGRATION_TREATY:0 "มีสนธิสัญญาอพยพย้ายถิ่นกับ $COUNTRY|Y$"
  HAS_PRESENCE:0 "Has any fleets, stations, megastructures or colonized planets"
  HAS_NO_PRESENCE:0 "Does NOT have any fleets, stations, megastructures or colonized planets"
  HAS_MEGASTRUCTURE:1 "Has megastructure $TYPE|Y$"
@@ -892,10 +892,10 @@
  IS_NOT_RIVAL_TOOLTIP:0 "Has NOT declared $TARGET|Y$ as their Rival."
  IS_NEIGHBOR_OF:0 "Is bordering $TARGET|Y$"
  IS_NOT_NEIGHBOR_OF:0 "Is NOT bordering $TARGET|Y$"
- IS_IN_FEDERATION_WITH_TOOLTIP:0 "Is in a Federation with $TARGET|Y$"
- IS_NOT_IN_FEDERATION_WITH_TOOLTIP:0 "Is NOT in a Federation with $TARGET|Y$"
- IS_OVERLORD_TO_TOOLTIP:0 "Is Overlord to $TARGET|Y$"
- IS_NOT_OVERLORD_TO_TOOLTIP:0 "Is NOT Overlord to $TARGET|Y$"
+ IS_IN_FEDERATION_WITH_TOOLTIP:0 "อยู่ในสหพันธ์เดียวกับ $TARGET|Y$"
+ IS_NOT_IN_FEDERATION_WITH_TOOLTIP:0 "ไม่ได้อยู่ในสหพันธ์เดียวกับ $TARGET|Y$"
+ IS_OVERLORD_TO_TOOLTIP:0 "เป็นเจ้าเหนือหัวของ $TARGET|Y$"
+ IS_NOT_OVERLORD_TO_TOOLTIP:0 "ไม่เป็นเจ้าเหนือหัวของ $TARGET|Y$"
  HAS_HYPERLANE_TO_TRIGGER:0 "Has a Hyperlane connection to $TO|Y$"
  HAS_NOT_HYPERLANE_TO_TRIGGER:0 "Does NOT have a Hyperlane connection to $TO|Y$"
  TRIGGER_IS_IRONMAN:0 "Game is in Ironman mode."
@@ -1123,7 +1123,7 @@
  REROLL_PLANET_MODIFIERS_EFFECT:0 "Re-roll planet modifiers\n"
  CLEAR_PLANET_MODIFIERS_EFFECT:0 "Clear planet modifiers\n"
  UNLOCKS_NEXT_TECH_TREE:0 "Unlocks a technology in §Y$TREE$§!\n"
- ADD_EXPERIENCE:1 "Gains $AMOUNT|0Y$ experience\n"
+ ADD_EXPERIENCE:1 "ได้ค่าประสบการณ์ $AMOUNT|0Y$\n"
  ADD_CIVIC:0 "Add civic $CIVIC|Y$\n"
  REMOVE_CIVIC:0 "Remove civic $CIVIC|Y$\n"
  SET_ORIGIN:0 "Origin set to $ORIGIN|Y$\n"
@@ -1290,7 +1290,7 @@
  REMOVE_ALL_NEGATIVE_TRAITS:1 "ลบคุณลักษณะเชิงลบทั้งหมดจาก $LEADER|Y$\n"
  REMOVE_ALL_POSITIVE_TRAITS:0 "Removes all positive traits from $LEADER|Y$\n"
  REMOVE_ALL_TRAITS:0 "Removes all traits from $LEADER|Y$\n"
- CHANGE_COUNTRY_TYPE_EFFECT:0 "Country Type will change to $TYPE|Y$"
+ CHANGE_COUNTRY_TYPE_EFFECT:0 "ประเภทของจักรวรรดิจะเปลี่ยนเป็น $TYPE|Y$"
  ADD_MISSION_PROGRESS:0 "เพิ่มความคืบหน้าของภารกิจ: $NUM|Y$"
  HAS_NUM_ETHICS:0 "จำนวนจริยธรรม $COMPARATOR$ $NUM|Y$"
  HAS_NOT_NUM_ETHICS:0 "จำนวนจริยธรรมไม่ $COMPARATOR$ $NUM|Y$"
@@ -1581,9 +1581,9 @@
  ADD_FEDERATION_COHESION:0 "เพิ่ม $VALUE|H$ ความสัมพันธ์ในสหพันธ์ไปที่ $FEDERATION|H$"
  FEDERATION_LEVEL_LESS_THAN:0 "$FEDERATION|H$ ไม่$COMPARE$ เลเวล $VAL1|0Y$"
  FEDERATION_LEVEL_AT_LEAST:0 "$FEDERATION|H$ $COMPARE$ เลเวล $VAL1|0Y$"
- ADD_FEDERATION_EXPERIENCE:1 "Add $EXPERIENCE|2Y$ experience to $FEDERATION|Y$"
- FEDERATION_EXPERIENCE_LESS_THAN:1 "$FEDERATION|H$ does NOT have $COMPARE$ $VAL1|2Y$ experience"
- FEDERATION_EXPERIENCE_AT_LEAST:1 "$FEDERATION|H$ has $COMPARE$ $VAL1|2Y$ experience"
+ ADD_FEDERATION_EXPERIENCE:1 "เพิ่มค่าประสบการณ์ $EXPERIENCE|2Y$ ไปที่ $FEDERATION|Y$"
+ FEDERATION_EXPERIENCE_LESS_THAN:1 "$FEDERATION|H$ ไม่มีค่าประสบการณ์ $COMPARE$ $VAL1|2Y$"
+ FEDERATION_EXPERIENCE_AT_LEAST:1 "$FEDERATION|H$ มีค่าประสบการณ์ $COMPARE$ $VAL1|2Y$"
  FEDERATION_COHESION_GROWTH_LESS_THAN:1 "$FEDERATION|H$ does NOT have $COMPARE$ $VAL1|2Y$ cohesion Growth"
  FEDERATION_COHESION_GROWTH_AT_LEAST:1 "$FEDERATION|H$ has $COMPARE$ $VAL1|2Y$ cohesion Growth"
  FEDERATION_COHESION_LESS_THAN:1 "$FEDERATION|H$ does NOT have $COMPARE$ $VAL1|2Y$ cohesion"
