--- a/mod/thmod/localisation/english/utopia_ascension_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_ascension_l_english.yml
@@ -379,8 +379,8 @@
  terraforming_candidate_category:0 "Ancient Signs of Life"
  terraforming_candidate_category_desc:0 "This barren and lifeless world is showing signs of once having supported a biosphere."
  MESSAGE_TERRAFORM_FOUND_TITLE:0 "$anomaly.2575.name$"
- MESSAGE_TERRAFORM_FOUND_DESC:0 "[From.GetName] has been identified as a Terraforming Candidate. The [From.GetPlanetMoon] will be tracked as a potential future colonization target."
- anomaly.2575.name:0 "Terraforming Candidate Discovered"
+ MESSAGE_TERRAFORM_FOUND_DESC:0 "[From.GetName] ถูกระบุว่าเป็นดาวที่สามารถปรับสภาพได้ [From.GetPlanetMoon] จะถูกติดตามว่าเป็นเป้าหมายในการตั้งอาณานิคมในอนาคต"
+ anomaly.2575.name:0 "ค้นพบดาวที่สามารถปรับสภาพได้"
  anomaly.2575.desc.intro:0 "Our detailed survey of [From.GetName] has revealed that it may once have supported life in the distant past. There are significant deposits of frozen water at the polar ice caps and beneath the [From.GetPlanetMoon]'s surface. The existence of valley networks suggest that the water may once have flowed freely."
  anomaly.2575.desc.1:0 "$anomaly.2575.desc.intro$\n\nTerraforming this [From.GetPlanetMoon] would theoretically be possible, but we do not yet possess the technology to accomplish this monumental task within a realistic timeframe."
  anomaly.2575.desc.2:0 "$anomaly.2575.desc.intro$\n\nThe energy costs would be daunting, but we do have the technology to gradually terraform this [From.GetPlanetMoon] into something that would support life once again."
@@ -587,17 +587,17 @@
  building_whisperers_sanctum_desc:0 "The Sanctum is a place dedicated to communion with the Whisperers. Here, secrets are traded in hushed tones, new knowledge is brought to be sealed away, and our murmurs join the chorus."
  covenant_detection_first_contact:0 "$building_whisperers_sanctum$"
  covenant_detection_first_contact_effect:0 "Our §YStarbase§! in this system gains: §YDetection Strength§! §G+5§!\n\n"
- whisperers_chosen:0 "Chosen of the Whisperers"
- eater_chosen:0 "Chosen of the Eater"
- composer_chosen:0 "Chosen of the Composer"
- instrument_chosen:0 "Chosen of the Instrument"
- COMPOSER_MARK:0 "Mark of the Composer"
+ whisperers_chosen:0 "ผู้ถูกเลือกจากผู้กระซิบ"
+ eater_chosen:0 "ผู้ถูกเลือกจากผู้ทำลาย"
+ composer_chosen:0 "ผู้ถูกเลือกจากผู้สร้าง"
+ instrument_chosen:0 "ผู้ถูกเลือกจากผู้บรรเลงดนตรี"
+ COMPOSER_MARK:0 "เครื่องหมายของผู้สร้าง"
  COMPOSER_MARK_DESC:0 "The mark of our Shroud Patron amplifies our psionic abilities and allows us to influence entire ships."
- EATER_MARK:0 "Mark of the Eater"
+ EATER_MARK:0 "เครื่องหมายของผู้ทำลาย"
  EATER_MARK_DESC:0 "$COMPOSER_MARK_DESC$"
- INSTRUMENT_MARK:0 "Mark of the Instrument"
+ INSTRUMENT_MARK:0 "เครื่องหมายของผู้บรรเลงดนตรี"
  INSTRUMENT_MARK_DESC:0 "$COMPOSER_MARK_DESC$"
- WHISPERERS_MARK:0 "Mark of the Whisperers"
+ WHISPERERS_MARK:0 "เครื่องหมายของผู้กระซิบ"
  WHISPERERS_MARK_DESC:0 "$COMPOSER_MARK_DESC$"
  tech_covenant_composer:0 "$COMPOSER_MARK$"
  tech_covenant_composer_desc:0 "We have discovered how to let psionic energy flow through our ships. Armed with this knowledge, we can now imbue our vessels with the powers of our patron."
