--- a/mod/thmod/localisation/english/ancient_relics_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_l_english.yml
@@ -56,11 +56,11 @@
  archaeologists_3:0 "โดรนโบราณคดี"
  bombardment_pox:0 "Javorian Pox"
  bombardment_pox_desc:0 "$bombardment_pox$ Bombardment showers the planet with a deadly pathogen.\n- §YModerate§! damage to §YArmies§!\n- §ELight§! damage to §YPlanet§!\n- §ENo§! damage to §YMechanical Pops§!\n- §RCatastrophic§! damage to §YOrganic Pops§!\n- Will bombard undefended planets\n- Can reduce planets to lifeless Tomb Worlds"
- pc_relic:0 "โลกโบราณ"
- pc_relic_desc:0 "เมืองที่เคยขยายไปทั่วโลกนี้ ปัจจุบันเหลือเพียงซากปรักหักพังโบราณและถูกทิ้งร้างและผู้อยู่อาศัยดั้งเดิมได้จากไปนานแล้ว"
- trait_pc_relic_preference:0 "ชอบอยู่ศัยในโลกโบราณ"
+ pc_relic:0 "ดาวโบราณ"
+ pc_relic_desc:0 "เมืองที่เคยขยายไปทั่วดาวนี้ ปัจจุบันเหลือเพียงซากปรักหักพังโบราณและถูกทิ้งร้างและผู้อยู่อาศัยดั้งเดิมได้จากไปนานแล้ว"
+ trait_pc_relic_preference:0 "ชอบอยู่ศัยในดาวโบราณ"
  trait_pc_relic_preference_desc:0 "$trait_pc_arctic_preference_desc$"
- mod_pc_relic_habitability:0 "การอยู่อาศัยได้ในโลกโบราณ"
+ mod_pc_relic_habitability:0 "การอยู่อาศัยได้ในดาวโบราณ"
  d_collapsed_spire:1 "£blocker£ ตึกสูงพังทลาย"
  d_collapsed_spire_desc:0 "An immense residential spire has collapsed under its own weight in this region, blocking access. While it was still standing, this towering structure must have been among the tallest on the planet."
  d_massive_crevice:1 "£blocker£ รอยแยกขนาดใหญ่"
