--- a/mod/thmod/localisation/english/clone_army_l_english.yml
+++ b/mod/thmod/localisation/english/clone_army_l_english.yml
@@ -15,13 +15,13 @@
  leader_trait_clone_army_full_admiral_desc:0 "Subjected since its creation to a military education regimen so intense few could endure it, this leader wields excellent martial and leadership abilities."
  leader_trait_clone_army_fertile_admiral:0 "Descendant Clone Army Admiral"
  leader_trait_clone_army_fertile_admiral_desc:0 "From its specialized military education, this leader holds an above-average understanding of martial procedures and how best to optimize them."
- TRAIT_INFERTILE:0 "§RCannot reproduce naturally§!"
- genelock_trait_tooltip:0 "§RCannot be genetically modified§!"
+ TRAIT_INFERTILE:0 "§Rไม่สามารถสืบพันธุ์ตามธรรมชาติได้§!"
+ genelock_trait_tooltip:0 "§Rไม่สามารถดัดแปลงพันธุกรรมได้§!"
  disables_clone_army_origin_features:0 "§RChoosing this Ascension Perk will disable Clone Army Origin mechanics.§!"
  clone_soldier_locked_genes:0 "§R$trait_clone_soldier_infertile$ and $trait_clone_soldier_infertile_full_potential$ species are too unstable for further genetic modification.§!"
  building_clone_army_clone_vat:0 "โรงเก็บถังโคลนนิ่งโบราณ"
  building_clone_army_clone_vat_desc:0 "Lost technology left behind by the Creators. Can be taken apart and reassembled, but its inner components and workings are much too advanced to replicate."
- building_clone_army_clone_vat_effect_desc:1 "Assembles and sustains up to §Y20§! £pops£ §Y$clone_soldier$§! Pops. The effectiveness of this assembly is reduced as the $building_clone_army_clone_vat$ reaches capacity."
+ building_clone_army_clone_vat_effect_desc:1 "ประกอบและรองรับได้ถึง §Y20§! ประชากร £pops£ §Y$clone_soldier$§! ประสิทธิผลของการประกอบนี้จะลดลงเมื่อ $building_clone_army_clone_vat$ เต็มความจุ"
  START_SCREEN_CLONE_ARMY:0 "We were made for war! Engineered soldiers who live and die by the Ancient Clone Vats left behind by our Creators, forever cast in their mold. Any memory of our masters is lost to past generations, and we do not know when or why they left us. It is likely that records were routinely erased, ever faithful to military protocol - but at some point in recent centuries, that changed. By chance, or perhaps some misfiring survival instinct, our subconscious drove us to seek answers, to seek new purpose and ways to break the form imposed on us.\n\nOur efforts since then have been ceaseless, at long last granting us access to the grand expanses of space. As our horizon widens, so too must our knowledge broaden - and so our chances of breaking free increase.\n\nWe shall not squander the possibilities given to us by our forebears. We shall fight to pass on these possibilities to future clones, and fight to eliminate the restrictions placed on us.\n"
  alert_declining_pops_title:0 "ประชากรลดลง"
  alert_declining_pops_instant:0 "£pops£ Pops are declining on the following planets:"
