--- a/mod/thmod/localisation/english/lithoids_l_english.yml
+++ b/mod/thmod/localisation/english/lithoids_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  vo_lithoid_voice:0 "Lithoid"
  lithoid:0 "หิน"
- MESSAGE_TERRAVORE_CONSUME_WORLD_TITLE:0 "กินโลก"
+ MESSAGE_TERRAVORE_CONSUME_WORLD_TITLE:0 "กินดาว"
  MESSAGE_TERRAVORE_CONSUME_WORLD_MINERALS_TEXT:0 "The consumption of $PLANET|Y$ yields minerals for the swarm."
  MESSAGE_TERRAVORE_CONSUME_WORLD_ALLOYS_TEXT:0 "The consumption of $PLANET|Y$ yields alloys for the swarm."
  MESSAGE_TERRAVORE_CONSUME_WORLD_POP_TEXT:0 "The consumption of $PLANET|Y$ yields bodies for the swarm."
@@ -18,7 +18,7 @@
  stage_feed_feed_feed: "Feed... Feed... FEED."
  being_devoured_modifier: "Being Devoured"
  being_devoured_modifier_desc: "This world is being devored by the local Terravore. Its days are numbered."
- lithoid_crater_effect: "Habitability for §Ynon-Lithoid§! pops: §R-50%§!"
+ lithoid_crater_effect: "การอยู่อาศัยได้ของประชากรที่ §Yไม่ใช่ Lithoid§!: §R-50%§!"
  civic_selective_kinship: "Selective Kinship"
  civic_selective_kinship_desc: "In an uncertain universe, only kin can be trusted. This civilization is selective about the species it defines as equals."
  wrong_species_class: "We do not allow this Species Class full citizenship rights."
