--- a/mod/thmod/localisation/english/necroids_l_english.yml
+++ b/mod/thmod/localisation/english/necroids_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
  origin_necrophage:0 "ผีดิบเนโครเฟจ"
  origin_necrophage_desc:1 "This civilization evolved as a parasite, forced to feed off other sapient life forms to sustain itself. As it arrives on the galactic stage, other species will either be brought into the fold, or become its food. For the necrophage, there can be no other way."
- origin_tooltip_necrophage_effects:3 "- $HOMEWORLD$ ['concept_necrophage_elevation_chamber'] $NEW_LINE$- $SPECIES_TRAITS$ ['concept_necrophage_trait'] $NEW_LINE$- Prepatent £pop£ §IPops§!: 12 $NEW_LINE$- ['concept_guaranteed_colonies']: Replaced with ['concept_preftl_civilizations']"
- origin_tooltip_necrophage_negative_effects: "- Only §INecrophage $pops_with_icon$§! can be £pop_cat_ruler£ §IRulers§! or recruited as §ILeaders§!"
+ origin_tooltip_necrophage_effects:3 "- $HOMEWORLD$ ['concept_necrophage_elevation_chamber'] $NEW_LINE$- $SPECIES_TRAITS$ ['concept_necrophage_trait'] $NEW_LINE$- £pop£ §Iประชากรเผ่าพันธุ์รอง§! (ที่จะกลายเป็นเนโครเฟจ) : 12 $NEW_LINE$- ['concept_guaranteed_colonies']: ถูกแทนที่ด้วย ['concept_preftl_civilizations']"
+ origin_tooltip_necrophage_negative_effects: "- §I$pops_with_icon$ เนโครเฟจ§! เท่านั้น ที่สามารถเป็น £pop_cat_ruler£ §Iผู้ปกครอง§! หรือได้รับคัดเลือกเป็น §Iผู้นำ§! ได้"
  civic_necrophage_secondary_species:0 "เผ่าพันธุ์ชั้นรองก่อนที่จะกลายเป็นเนโครเฟจ"
  trait_necrophage:0 "เนโครเฟจ"
  trait_necrophage_desc:1 "§LThis species of near-immortals procreates by consuming pops of other species.§!"
@@ -46,11 +46,11 @@
  necroids.2.desc.gestalt:0 "Ever since the [Root.GetAdj] takeover of [Root.Capital.GetName], the transformation of [necrophage_species.GetNamePlural] into [Root.GetSpeciesNamePlural] has been shrouded in ritual. Once every ten years - a date which is rapidly approaching - the "Apprentices" gather in the Chamber of Elevation for a special ceremony. What exactly happens to them is a secret closely-guarded by our collective consciousness, but when they emerge, they do so as [Root.GetSpeciesAdj] drones."
  necroids.2.A:0 "Let the preparations commence!"
  necroids.2.A.tooltip:1 "At the end of the year, all §H$job_necro_apprentice_plural$§! on §H[Root.Capital.GetName]§! will be converted into §H[Root.GetSpeciesNamePlural]§!.\n\nThis ceremony will take place every §H10 years§! on each [Root.GetAdj] planet with a §HChamber of Elevation§!."
- building_sacrificial_temple_1:0 "วิหารแห่งการเสียสละ"
+ building_sacrificial_temple_1:0 "วิหารแห่งการบวงสรวง"
  building_sacrificial_temple_1_desc:0 "A revered site in which solemn preachers and dedicated pupils pray and work towards each prosperous yet bloody cycle."
  building_sacrificial_temple_2:0 "วิหารโฮโลที่น่ากลัว"
  building_sacrificial_temple_2_desc:0 "Technological enhancements to this consecrated building allow for more rigorous study, and a more tangible sense of devotion to causes beyond its mutable walls."
- building_sacrificial_temple_3:0 "วิหารแห่งการเสียสละอันยิ่งใหญ่"
+ building_sacrificial_temple_3:0 "วิหารแห่งการบวงสรวงอันยิ่งใหญ่"
  building_sacrificial_temple_3_desc:0 "A site of supreme consecration in which multi-sensory immersion fields allow the faithful to honor every [This.Owner.GetAdj] sacrifice - past, present and future."
  job_death_priest:0 "นักบวชมรณะ"
  job_death_priest_plural:0 "นักบวชมรณะ"
@@ -150,25 +150,25 @@
  civic_reanimated_armies:1 "ผู้ฟื้นคืนชีพศพ"
  civic_reanimated_armies_desc:1 "Within this society, death is no bar to the call to arms. Masters of the art of necromancy reanimate corpses to raise dread hosts and guardians, striking fear into the hearts of lesser mortals."
  disabled_by_synthetic_ascension:0 "Incompatible with §YSynthetic Ascension§!"
- civic_tooltip_reanimated_armies_effects:2 "§YMilitary Academy§! building is replaced by a §YDread Encampment§!, granting £job_necromancer£ §YNecromancer§! jobs and allowing the recruitment of §YUndead Armies§!.\n$job_necromancer_effect_desc$.\nDefeated organic armies are sometimes resurrected as §YUndead Armies§!.\n\nDefeated organic Leviathans can sometimes be resurrected."
+ civic_tooltip_reanimated_armies_effects:2 "สิ่งปลูกสร้าง §Yโรงเรียนการทหาร§! ถูกแทนที่ด้วย §Yค่ายที่พักที่น่ากลัว§!, อนุญาตให้ มีงาน £job_necromancer£ §YNecromancer§! และอนุญาตให้มีการคัดเลือก §Yกองทัพผีดิบ§!\n$job_necromancer_effect_desc$\nกองทัพสิ่งมีชีวิตที่พ่ายแพ้บางครั้งอาจฟื้นคืนชีพขึ้นมาเป็น §Yกองทัพผีดิบ§!\n\nสิ่งมีชีวิตเลวีอาธานที่พ่ายแพ้สามารถฟื้นคืนชีพได้เป็นบางครั้ง"
  building_dread_encampment:0 "ค่ายที่พักที่น่ากลัว"
  building_dread_encampment_desc:1 "It is best to shield the activities of the necromancers from the tender eyes of the public as they raise undead hordes to fight in our armies."
- job_necromancer_effect_desc:3 "£job_necromancer£ $job_necromancer_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £physics£ £society£ §YResearch Points§! and £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, and spawn £defense_army£ §YUndead Defense Armies§!\nGrants access to the £building£ §Y$holding_dread_outpost$§! Holding"
+ job_necromancer_effect_desc:3 "£job_necromancer£ $job_necromancer_plural$ เปลี่ยน £consumer_goods£ §Y$consumer_goods$§! เป็น §Yแต้มการวิจัย§! £physics£ £society£ และ £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, และวางกำลัง £defense_army£ §Yกองกำลังป้องกัน(ผีดิบ)§!\nสามารถถือครองสิ่งปลูกสร้าง £building£ §Y$holding_dread_outpost$§! ได้"
  undead_army:0 "กองทัพผีดิบ"
  undead_army_desc:1 "Undead soldiers lifted from the grave by necromancers. Freed from the fear of death, they strike terror into the hearts of their enemies with their foul bearing and ferocity in battle!"
- undead_army_plural:0 "Undead Armies"
+ undead_army_plural:0 "กองทัพผีดิบ"
  giant_undead_army:0 "กองทัพผีดิบร่างยักษ์"
  giant_undead_army_desc:0 "A gigantic skeleton ready to wreak havoc on the universe. It will not be gentle when invading a planet."
  giant_undead_army_plural:0 "กองทัพผีดิบร่างยักษ์"
  undead_defense_army:0 "Undead Defense Army"
  undead_defense_army_desc:0 "Undead soldiers lifted from the grave by necromancers, brought back to life to protect our planets from all that might threaten them!"
  job_necromancer:1 "Necromancer"
- job_necromancer_plural:1 "Necromancers"
+ job_necromancer_plural:1 "Necromancer"
  job_necromancer_desc:0 "Raising the dead to fight in the nation's armies is hard work. Only the most skilled practitioners know the secret arts required to achieve this feat!"
- planet_necromancers:0 "Necromancer Jobs"
+ planet_necromancers:0 "งาน Necromancer"
  mod_job_necromancer_add:0 "งาน$job_necromancer$"
  mod_job_necromancer_per_pop:0 "§G+1§! อาชีพ $job_necromancer$ ต่อ $VALUE$ ประชากร"
- mod_job_necromancer_per_pop_short:0 "\n§G+1§! £mod_job_necromancer_add£ per $VALUE$ £pop£"
+ mod_job_necromancer_per_pop_short:0 "\n§G+1§! £mod_job_necromancer_add£ ต่อ $VALUE$ £pop£"
  galactic_features.385.reanimated:1 "Send in the [Owner.GetNecromancersUpper]."
  distar.218.name:0 "Rise Again"
  distar.218.desc.regular:0 "After a lengthy ritual, the §YTiyanki Matriarch§! has returned from beyond and now serves our cause."
@@ -206,19 +206,19 @@
  necroids.20.name: "Mechromancy Upgrade Installed"
  necroids.20.desc: "The successful installation of Mechromancy protocols will enable us to reanimate certain deceased Leviathans. Organic components are inferior to mechanical upgrades. We can engineer the flesh and produce a facsimile of organic life."
  necroids.20.a: "Reanimator functions engaged."
- building_galactic_memorial_1:0 "วิหารแห่งการพักผ่อน"
+ building_galactic_memorial_1:0 "วิหารแห่งการพักผ่อนหลังความตาย"
  building_galactic_memorial_1_desc:0 "This humble memorial focuses thoughts and study upon the multi-faceted nature of death and endings."
- building_galactic_memorial_2:0 "เสาหลักของการดับสูญ"
+ building_galactic_memorial_2:0 "เสาหลักแห่งการดับสูญ"
  building_galactic_memorial_2_desc:0 "A solemn place dedicated to the contemplation of death, in which many an ending may be chronicled."
  building_galactic_memorial_3:0 "อนุสรณ์สถานกาแล็กติก"
  building_galactic_memorial_3_desc:0 "A monumental library of all that may or may not be understood about endings, chronicled for unknowable future ages."
- building_galactic_memorial_regular_tooltip:1 "§YSanctuaries of Repose§! provide £job_death_chronicler£ $job_death_chronicler$ jobs, and improve §YGoverning Ethics Attraction§! on §HTomb Worlds§! and §HRelic Worlds§!"
- building_galactic_memorial_gestalt_tooltip:1 "§YSanctuaries of Repose§! provide £job_chronicle_drone£ $job_chronicle_drone$ jobs, and decrease §YDeviancy§! on §HTomb Worlds§! and §HRelic Worlds§!"
- job_death_chronicler:0 "Death Chronicler"
- job_death_chronicler_plural:0 "Death Chroniclers"
+ building_galactic_memorial_regular_tooltip:1 "- §Yวิหารแห่งการพักผ่อนหลังความตาย§! ให้งาน £job_death_chronicler£ $job_death_chronicler$, และวิหารยังช่วยปรับปรุง §Yการดึงดูดจริยธรรมการปกครอง§! บน §Hดาวแห่งความตาย§! และ §Hดาวโบราณ§!"
+ building_galactic_memorial_gestalt_tooltip:1 "- §Yวิหารแห่งการพักผ่อนหลังความตาย§! ให้งาน £job_chronicle_drone£ $job_chronicle_drone$, และวิหารยังช่วยลด §Yความเบี่ยงเบน§! บน §Hดาวแห่งความตาย§! และ §Hดาวโบราณ§!"
+ job_death_chronicler:0 "นักประวัติศาสตร์ความตาย"
+ job_death_chronicler_plural:0 "นักประวัติศาสตร์ความตาย"
  job_death_chronicler_desc:0 "Entropy is the domain of these scholars, who observe and record death and its effects in all their various expressions."
- job_death_chronicler_effect_desc:2 "£job_death_chronicler£ $job_death_chronicler_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £unity£ §Y$unity$§!, [GetCultureWorkerSpiMatOutput][GetCultureWorkerEgalAuthOutput][GetCultureWorkerMilPacOutput][GetCultureWorkerXenoOutput] and £stability£ §YStability§!.\n\n£job_death_chronicler£ Death Chroniclers' effects vary depending on the Empire's ethics."
- job_death_chronicler_simple_effect_desc:0 "£job_death_chronicler£ $job_death_chronicler_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £unity£ §Y$unity$§!, £stability£ §YStability§! and inherit the §YEthics-based§! modifiers of §Y£job_culture_worker£ $job_culture_worker_plural$§!."
+ job_death_chronicler_effect_desc:2 "£job_death_chronicler£ $job_death_chronicler_plural$ เปลี่ยน £consumer_goods£ §Y$consumer_goods$§! เป็น £unity£ §Y$unity$§!, [GetCultureWorkerSpiMatOutput][GetCultureWorkerEgalAuthOutput][GetCultureWorkerMilPacOutput][GetCultureWorkerXenoOutput] และ £stability£ §Yเสถียรภาพ§!\n\nผลที่ได้จากงาน £job_death_chronicler£ นักประวัติศาสตร์ความตาย จะแตกต่างกันออกไป ขึ้นอยู่กับจริยธรรมการปกครองของจักรวรรดิ"
+ job_death_chronicler_simple_effect_desc:0 "- £job_death_chronicler£ $job_death_chronicler_plural$ เปลี่ยน £consumer_goods£ §Y$consumer_goods$§! เป็น £unity£ §Y$unity$§!, £stability£ §Yเสถียรภาพ§! และ §Yจริยธรรมการปกครองของจักรวรรดิ§! มีผลต่ออาชีพ §Y£job_culture_worker£ $job_culture_worker_plural$§! รวมไปถึงผลที่ได้จากงานนี้ด้วย"
  job_chronicle_drone:0 "Chronicle Drone"
  job_chronicle_drone_plural:0 "Chronicle Drones"
  job_chronicle_drone_desc:0 "These specialized drones turn their thoughts to entropy, researching terminal decay as a counterpoint to our own, continued existence."
@@ -290,10 +290,10 @@
  IS_AMBIENT_OBJECT_TYPE:0 "Is ambient object $TYPE$"
  IS_NOT_AMBIENT_OBJECT_TYPE:0 "Is NOT ambient object $TYPE$"
  CHANGE_COLONY_FOUNDATION_DATE:0 "Date of original colonization is changed by $VALUE$ days."
- getnecromancers_regular_upper:0 "Necromancers"
+ getnecromancers_regular_upper:0 "Necromancer"
  getnecromancers_hive_upper:0 "Necro-Drones"
  getnecromancers_machine_upper:0 "Recommissioners"
- getnecromancers_regular_lower:0 "necromancers"
+ getnecromancers_regular_lower:0 "necromancer"
  getnecromancers_hive_lower:0 "necro-drones"
  getnecromancers_machine_lower:0 "recommissioners"
  reanimated_space_dragon_red:0 "$space_dragon_red$"
