--- a/mod/thmod/localisation/english/utopia_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_l_english.yml
@@ -43,10 +43,10 @@
  ap_master_builders_habitat_size:2 "§Hที่อยู่อาศัยในอวกาศ§! ของจักรวรรดิเราจะมีที่ว่างเพิ่มเติมอีก §Y2§! เขต"
  allow_edict_consectrated_worlds:5 "§Hปลดล็อกการตัดสินใจ:§! ดาวศักดิ์สิทธิ์\n"
  describe_edict_consectrated_worlds:5 "§Eทำดาวเคราะห์ที่ไม่มีใครอยู่ให้เป็นดาวศักดิ์สิทธิ์ (สูงสุดที่ §Y3§!) เพิ่ม §Yแรงดึงดูดจริยธรรมจิตวิญญาณ§! และ §Yความอยู่ดีกินดีทั่วทั้งจักรวรรดิ§! เช่นเดียวกับ £unity£ §Yการสร้างเอกภาพ§! ตามระดับความศักดิ์สิทธิ์ของดาวเคราะห์ (เมื่อทำเสร็จแล้ว)§!"
- allow_machine_worlds:2 "§Hปลดล็อกตัวเลือกการปรับสภาพดาว:§! โลกเครื่องจักร"
- describe_machine_worlds:6 "- §Yโลกเครื่องจักร§! เป็นดาวเคราะห์ชนิดพิเศษที่ไม่เอื้ออำนวยต่อสิ่งมีชีวิตส่วนใหญ่ แต่ไม่ถูกจำกัดจำนวนของเขตต่างๆที่รองรับ: £district£ §Yเขตกำเนิดไฟฟ้า§!, §Yเขตเหมืองแร่§! และ §Yเขตเกษตรกรรม§!\n\n- £pop£ §Yประชากร§! ที่อาศัยบน §Yดาวเครื่องจักร§! จะมี §Yผลผลิตของทรัพยากร§! เพิ่มขึ้น §G+10%§! และ §Yการใช้ที่อยู่อาศัย§! ลดลง §G10%§! เขต £district£ §Yเขตเกษตรกรรม§! บนดาวจะถูกทำลาย"
- allow_hive_worlds:0 "§Hปลดล็อกตัวเลือกการปรับสภาพดาว:§! โลกที่เป็นรัง"
- describe_hive_worlds:1 "- §Yโลกที่เป็นรัง§! เป็นดาวเคราะห์ชนิดพิเศษที่ไม่เอื้ออำนวยต่อประชากรที่ไม่ใช่สิ่งมีชีวิตจิตสำนึกร่วม แต่ไม่ถูกจำกัดจำนวนของเขตต่างๆที่รองรับ: £district£ §Yเขตกำเนิดไฟฟ้า§!, §Yเขตเหมืองแร่§! และ §Yเขตเกษตรกรรม§! และ §Yเขตรัง§! มีประสิทธิภาพมากขึ้น\n\n- £pop£ §Yประชากร§! ที่อาศัยบน §Yดาวที่เป็นรัง§! จะมี §Yผลผลิตของทรัพยากร§! เพิ่มขึ้น §G+10%§!"
+ allow_machine_worlds:2 "§Hปลดล็อกตัวเลือกการปรับสภาพดาว:§! ดาวเครื่องจักร"
+ describe_machine_worlds:6 "- §Yดาวเครื่องจักร§! เป็นดาวเคราะห์ชนิดพิเศษที่ไม่เอื้ออำนวยต่อสิ่งมีชีวิตส่วนใหญ่ แต่ไม่ถูกจำกัดจำนวนของเขตต่างๆที่รองรับ: £district£ §Yเขตกำเนิดไฟฟ้า§!, §Yเขตเหมืองแร่§! และ §Yเขตเกษตรกรรม§!\n\n- £pop£ §Yประชากร§! ที่อาศัยบน §Yดาวเครื่องจักร§! จะมี §Yผลผลิตของทรัพยากร§! เพิ่มขึ้น §G+10%§! และ §Yการใช้ที่อยู่อาศัย§! ลดลง §G10%§! เขต £district£ §Yเขตเกษตรกรรม§! บนดาวจะถูกทำลาย"
+ allow_hive_worlds:0 "§Hปลดล็อกตัวเลือกการปรับสภาพดาว:§! ดาวที่เป็นรัง"
+ describe_hive_worlds:1 "- §Yดาวที่เป็นรัง§! เป็นดาวเคราะห์ชนิดพิเศษที่ไม่เอื้ออำนวยต่อประชากรที่ไม่ใช่สิ่งมีชีวิตจิตสำนึกร่วม แต่ไม่ถูกจำกัดจำนวนของเขตต่างๆที่รองรับ: £district£ §Yเขตกำเนิดไฟฟ้า§!, §Yเขตเหมืองแร่§! และ §Yเขตเกษตรกรรม§! และ §Yเขตรัง§! มีประสิทธิภาพมากขึ้น\n\n- £pop£ §Yประชากร§! ที่อาศัยบน §Yดาวที่เป็นรัง§! จะมี §Yผลผลิตของทรัพยากร§! เพิ่มขึ้น §G+10%§!"
  ALLOW_PSI_CORPS:1 "ปลดล็อกสิ่งปลูกสร้าง: §Y$building_psi_corps$§!"
  ALLOW_PSI_ARMIES:0 "§H$psionic_army_plural$§! can now be recruited."
  dyson_sphere_0_MEGASTRUCTURE_DETAILS:1 "A §Y$dyson_sphere_5$§! fully envelops a given star, converting all solar output directly to £energy£ Energy Credits."
